joa integration.