@@ -13,12 +13,43 @@
 package org.eclipselabs.garbagecat.domain;
 
 import static java.math.RoundingMode.HALF_EVEN;
-import static org.eclipselabs.garbagecat.util.Memory.gigabytes;
-import static org.eclipselabs.garbagecat.util.Memory.megabytes;
+import static org.eclipselabs.garbagecat.util.Memory.Unit.BYTES;
 import static org.eclipselabs.garbagecat.util.Memory.Unit.KILOBYTES;
-import static org.eclipselabs.garbagecat.util.jdk.Analysis.*;
+import static org.eclipselabs.garbagecat.util.jdk.Analysis.ERROR_EXPLICIT_GC_SERIAL_CMS;
+import static org.eclipselabs.garbagecat.util.jdk.Analysis.ERROR_EXPLICIT_GC_SERIAL_G1;
+import static org.eclipselabs.garbagecat.util.jdk.Analysis.ERROR_G1_HUMONGOUS_JDK_OLD;
+import static org.eclipselabs.garbagecat.util.jdk.Analysis.ERROR_PHYSICAL_MEMORY;
+import static org.eclipselabs.garbagecat.util.jdk.Analysis.ERROR_SERIAL_GC;
+import static org.eclipselabs.garbagecat.util.jdk.Analysis.ERROR_UNIDENTIFIED_LOG_LINES_PREPARSE;
+import static org.eclipselabs.garbagecat.util.jdk.Analysis.INFO_FIRST_TIMESTAMP_THRESHOLD_EXCEEDED;
+import static org.eclipselabs.garbagecat.util.jdk.Analysis.INFO_G1_HUMONGOUS_ALLOCATION;
+import static org.eclipselabs.garbagecat.util.jdk.Analysis.INFO_NEW_RATIO_INVERTED;
+import static org.eclipselabs.garbagecat.util.jdk.Analysis.INFO_PERM_GEN;
+import static org.eclipselabs.garbagecat.util.jdk.Analysis.INFO_SWAPPING;
+import static org.eclipselabs.garbagecat.util.jdk.Analysis.INFO_SWAP_DISABLED;
+import static org.eclipselabs.garbagecat.util.jdk.Analysis.INFO_UNIDENTIFIED_LOG_LINE_LAST;
+import static org.eclipselabs.garbagecat.util.jdk.Analysis.WARN_APPLICATION_STOPPED_TIME_MISSING;
+import static org.eclipselabs.garbagecat.util.jdk.Analysis.WARN_CMS_CLASS_UNLOADING_NOT_ENABLED;
+import static org.eclipselabs.garbagecat.util.jdk.Analysis.WARN_CMS_INCREMENTAL_MODE;
+import static org.eclipselabs.garbagecat.util.jdk.Analysis.WARN_CMS_INC_MODE_WITH_INIT_OCCUP_FRACT;
+import static org.eclipselabs.garbagecat.util.jdk.Analysis.WARN_GC_SAFEPOINT_RATIO;
+import static org.eclipselabs.garbagecat.util.jdk.Analysis.WARN_GC_STOPPED_RATIO;
+import static org.eclipselabs.garbagecat.util.jdk.Analysis.WARN_PARALLELISM_INVERTED;
+import static org.eclipselabs.garbagecat.util.jdk.Analysis.WARN_PERM_MIN_NOT_EQUAL_MAX;
+import static org.eclipselabs.garbagecat.util.jdk.Analysis.WARN_PERM_SIZE_NOT_SET;
+import static org.eclipselabs.garbagecat.util.jdk.Analysis.WARN_PRINT_COMMANDLINE_FLAGS;
+import static org.eclipselabs.garbagecat.util.jdk.Analysis.WARN_PRINT_GC_CAUSE_DISABLED;
+import static org.eclipselabs.garbagecat.util.jdk.Analysis.WARN_PRINT_GC_CAUSE_MISSING;
+import static org.eclipselabs.garbagecat.util.jdk.Analysis.WARN_PRINT_GC_CAUSE_NOT_ENABLED;
+import static org.eclipselabs.garbagecat.util.jdk.Analysis.WARN_SERIALISM_INVERTED;
+import static org.eclipselabs.garbagecat.util.jdk.Analysis.WARN_SYS_GT_USER;
+import static org.eclipselabs.garbagecat.util.jdk.Analysis.WARN_UNIDENTIFIED_LOG_LINE_REPORT;
 
 import java.math.BigDecimal;
+import java.math.RoundingMode;
+import java.util.ArrayList;
+import java.util.Date;
+import java.util.Iterator;
 import java.util.List;
 
 import org.eclipselabs.garbagecat.domain.jdk.unified.SafepointEventSummary;
@@ -28,12 +59,11 @@ import org.eclipselabs.garbagecat.util.Memory;
 import org.eclipselabs.garbagecat.util.jdk.Analysis;
 import org.eclipselabs.garbagecat.util.jdk.JdkMath;
 import org.eclipselabs.garbagecat.util.jdk.JdkRegEx;
-import org.eclipselabs.garbagecat.util.jdk.JdkUtil;
-import org.eclipselabs.garbagecat.util.jdk.JdkUtil.CollectorFamily;
 import org.eclipselabs.garbagecat.util.jdk.JdkUtil.LogEventType;
-import org.eclipselabs.garbagecat.util.jdk.Jvm;
 import org.eclipselabs.garbagecat.util.jdk.unified.UnifiedRegEx;
 import org.eclipselabs.garbagecat.util.jdk.unified.UnifiedUtil;
+import org.github.joa.JvmOptions;
+import org.github.joa.domain.GarbageCollector;
 
 /**
  * JVM run data.
@@ -57,11 +87,6 @@ public class JvmRun {
      * Total number of blocking events.
      */
     private int blockingEventCount;
-
-    /**
-     * Collector families.
-     */
-    private List<CollectorFamily> collectorFamilies;
 
     /**
      * Number of <code>BlockingEvent</code>s where duration &gt; <code>TimesData</code> "real" time.
@@ -97,7 +122,7 @@ public class JvmRun {
      * The first blocking event.
      */
     private BlockingEvent firstGcEvent;
-
+    
     /**
      * The first safepoint event.
      */
@@ -119,9 +144,14 @@ public class JvmRun {
     private long invertedSerialismCount;
 
     /**
-     * JVM environment information.
+     * Convenience field for the JDK version string.
      */
-    private Jvm jvm;
+    private String jdkVersion;
+
+    /**
+     * JVM options.
+     */
+    private JvmOptions jvmOptions;
 
     /**
      * The last blocking event.
@@ -199,9 +229,25 @@ public class JvmRun {
     private Memory maxYoungSpace;
 
     /**
+     * JVM memory information.
+     */
+    private String memory;
+
+    /**
      * Number of <code>ParallelCollection</code> events.
      */
     private long parallelCount;
+
+    /**
+     * Physical memory.
+     */
+    private Memory physicalMemory = Memory.ZERO;
+
+    /**
+     * Physical memory free.
+     */
+    private Memory physicalMemoryFree = Memory.ZERO;
+
     /**
      * Whether or not the JVM events are from a preprocessed file.
      */
@@ -223,6 +269,11 @@ public class JvmRun {
     private long serialCount;
 
     /**
+     * The date and time the JVM was started.
+     */
+    private Date startDate;
+
+    /**
      * Total number of {@link org.eclipselabs.garbagecat.domain.jdk.ApplicationStoppedTimeEvent}.
      */
     private int stoppedTimeEventCount;
@@ -236,6 +287,16 @@ public class JvmRun {
      * Total stopped time duration (microseconds).
      */
     private long stoppedTimeTotal;
+
+    /**
+     * Swap size.
+     */
+    private Memory swap = Memory.ZERO;
+
+    /**
+     * Swap free.
+     */
+    private Memory swapFree = Memory.ZERO;
 
     /**
      * Number of<code>ParallelCollection</code> or <code>Serial Collection</code> where sys exceeds user time.
@@ -290,15 +351,12 @@ public class JvmRun {
     private LogEvent worstSysGtUserEvent;
 
     /**
-     * Constructor accepting throughput threshold, JVM services, and JVM environment information.
+     * Constructor accepting throughput threshold.
      * 
      * @param throughputThreshold
      *            throughput threshold for identifying bottlenecks.
-     * @param jvm
-     *            JVM environment information.
      */
-    public JvmRun(Jvm jvm, int throughputThreshold) {
-        this.jvm = jvm;
+    public JvmRun(int throughputThreshold) {
         this.throughputThreshold = throughputThreshold;
     }
 
@@ -306,11 +364,9 @@ public class JvmRun {
      * Do analysis.
      */
     public void doAnalysis() {
-
-        if (jvm.getOptions() != null) {
-            doJvmOptionsAnalysis();
+        if (jvmOptions != null) {
+            jvmOptions.doAnalysis();
         }
-
         // Unidentified logging lines
         if (!getUnidentifiedLogLines().isEmpty()) {
             if (!preprocessed) {
@@ -334,31 +390,25 @@ public class JvmRun {
                 }
             }
         }
-
         // Try to infer event types when gc details are missing
         if (getEventTypes().contains(LogEventType.VERBOSE_GC_OLD)) {
-            if (getCollectorFamilies().contains(CollectorFamily.G1)) {
-                if (getJvm().JdkNumber() == 8) {
+            if (jvmOptions.getJvmContext().getGarbageCollectors().contains(GarbageCollector.G1)) {
+                if (jvmOptions.getJvmContext().getVersionMajor() == 8) {
                     if (!getEventTypes().contains(LogEventType.G1_FULL_GC_SERIAL)) {
                         getEventTypes().add(LogEventType.G1_FULL_GC_SERIAL);
                         getEventTypes().remove(LogEventType.VERBOSE_GC_OLD);
                     }
-                    if (!getAnalysis().contains(Analysis.ERROR_SERIAL_GC_G1)) {
-                        getAnalysis().add(Analysis.ERROR_SERIAL_GC_G1);
+                    if (!hasAnalysis(Analysis.ERROR_SERIAL_GC_G1)) {
+                        analysis.add(Analysis.ERROR_SERIAL_GC_G1);
                     }
                 }
             }
         }
-
-        if (haveData()) {
-            doDataAnalysis();
+        // Don't double report
+        if (hasAnalysis(org.github.joa.util.Analysis.WARN_CMS_CLASS_UNLOADING_DISABLED)
+                && hasAnalysis(WARN_CMS_CLASS_UNLOADING_NOT_ENABLED)) {
+            analysis.remove(WARN_CMS_CLASS_UNLOADING_NOT_ENABLED);
         }
-    }
-
-    /**
-     * Do data analysis.
-     */
-    private void doDataAnalysis() {
         // Check for partial log
         if (firstGcEvent != null || firstSafepointEvent != null) {
             long firstTimeStamp = Long.MIN_VALUE;
@@ -397,563 +447,144 @@ public class JvmRun {
         }
 
         // Check if logging indicates gc details missing
-        if (!analysis.contains(WARN_PRINT_GC_DETAILS_MISSING) && !analysis.contains(WARN_PRINT_GC_DETAILS_DISABLED)) {
+        if (!hasAnalysis(org.github.joa.util.Analysis.WARN_JDK8_PRINT_GC_DETAILS_MISSING)
+                && !hasAnalysis(org.github.joa.util.Analysis.WARN_JDK8_PRINT_GC_DETAILS_DISABLED)) {
             if (getEventTypes().contains(LogEventType.VERBOSE_GC_OLD)
                     || getEventTypes().contains(LogEventType.VERBOSE_GC_YOUNG)) {
-                analysis.add(WARN_PRINT_GC_DETAILS_MISSING);
+                jvmOptions.addAnalysis(org.github.joa.util.Analysis.WARN_JDK8_PRINT_GC_DETAILS_MISSING);
             }
         }
 
         // Check for -XX:+PrintReferenceGC by event type
-        if (!analysis.contains(WARN_PRINT_REFERENCE_GC_ENABLED)) {
+        if (!hasAnalysis(org.github.joa.util.Analysis.INFO_JDK8_PRINT_REFERENCE_GC_ENABLED)) {
             if (getEventTypes().contains(LogEventType.REFERENCE_GC)) {
-                analysis.add(WARN_PRINT_REFERENCE_GC_ENABLED);
+                jvmOptions.addAnalysis(org.github.joa.util.Analysis.INFO_JDK8_PRINT_REFERENCE_GC_ENABLED);
             }
         }
 
         // Check for PAR_NEW disabled.
-        if (getEventTypes().contains(LogEventType.SERIAL_NEW) && collectorFamilies.contains(CollectorFamily.CMS)) {
+        if (getEventTypes().contains(LogEventType.SERIAL_NEW)
+                && jvmOptions.getJvmContext().getGarbageCollectors().contains(GarbageCollector.CMS)) {
             // Replace general gc.serial analysis
             if (analysis.contains(ERROR_SERIAL_GC)) {
                 analysis.remove(ERROR_SERIAL_GC);
             }
-            if (!analysis.contains(WARN_CMS_PAR_NEW_DISABLED)) {
-                analysis.add(WARN_CMS_PAR_NEW_DISABLED);
+            if (!jvmOptions.hasAnalysis(org.github.joa.util.Analysis.WARN_JDK8_CMS_PAR_NEW_DISABLED)) {
+                jvmOptions.addAnalysis(org.github.joa.util.Analysis.WARN_JDK8_CMS_PAR_NEW_DISABLED);
             }
         }
 
         // Check for swappiness
-        if (getJvm().getPercentSwapFree() < 95) {
+        if (getPercentSwapFree() < 95) {
             analysis.add(INFO_SWAPPING);
         }
         // Check for swap disabled
-        if (getJvm().getSwap().isZero()) {
+        if (getSwap().isZero()) {
             analysis.add(INFO_SWAP_DISABLED);
         }
 
         // Check for insufficient physical memory
-        if (!getJvm().getPhysicalMemory().isZero()) {
+        if (!getPhysicalMemory().isZero()) {
             Memory jvmMemory;
-            if (jvm.getUseCompressedOopsDisabled() == null && jvm.getUseCompressedClassPointersDisabled() == null) {
+            if (!org.github.joa.util.JdkUtil.isOptionDisabled(jvmOptions.getUseCompressedOops())
+                    && !org.github.joa.util.JdkUtil.isOptionDisabled(jvmOptions.getUseCompressedClassPointers())) {
                 // Using compressed class pointers space
-                jvmMemory = getJvm().getMaxHeapBytes().plus(getJvm().getMaxPermBytes())
-                        .plus(getJvm().getMaxMetaspaceBytes()).plus(getJvm().getCompressedClassSpaceSizeBytes());
+                jvmMemory = getMaxHeapBytes().plus(getMaxPermBytes()).plus(getMaxMetaspaceBytes())
+                        .plus(getCompressedClassSpaceSizeBytes());
+
             } else {
                 // Not using compressed class pointers space
-                jvmMemory = getJvm().getMaxHeapBytes().plus(getJvm().getMaxPermBytes())
-                        .plus(getJvm().getMaxMetaspaceBytes());
+                jvmMemory = getMaxHeapBytes().plus(getMaxPermBytes()).plus(getMaxMetaspaceBytes());
             }
-            if (jvmMemory.greaterThan(getJvm().getPhysicalMemory())) {
+            if (jvmMemory.greaterThan(getPhysicalMemory())) {
                 analysis.add(ERROR_PHYSICAL_MEMORY);
             }
         }
 
         // Check for humongous allocations on old JDK not able to fully reclaim them in a young collection
-        if (collectorFamilies.contains(CollectorFamily.G1) && analysis.contains(INFO_G1_HUMONGOUS_ALLOCATION)
-                && (jvm.JdkNumber() == 7 || (jvm.JdkNumber() == 8 && jvm.JdkUpdate() < 60))) {
+        if (jvmOptions.getJvmContext().getGarbageCollectors().contains(GarbageCollector.G1)
+                && analysis.contains(INFO_G1_HUMONGOUS_ALLOCATION)
+                && (jvmOptions.getJvmContext().getVersionMajor() == 7
+                        || (jvmOptions.getJvmContext().getVersionMajor() == 8
+                                && jvmOptions.getJvmContext().getVersionMinor() < 60))) {
             // Don't double report
             analysis.remove(INFO_G1_HUMONGOUS_ALLOCATION);
             analysis.add(ERROR_G1_HUMONGOUS_JDK_OLD);
         }
-
-        // Check for using G1 collector JDK < u40
-        if ((collectorFamilies.contains(CollectorFamily.G1) || jvm.getUseG1Gc() != null) && jvm.JdkNumber() == 8
-                && jvm.JdkUpdate() < 40) {
-            analysis.add(WARN_G1_JDK8_PRIOR_U40);
-        }
-
         // Check for young space >= old space
         if (maxYoungSpace != null && maxOldSpace != null && maxYoungSpace.getValue(KILOBYTES) > 0
                 && maxYoungSpace.compareTo(maxOldSpace) >= 0) {
             analysis.add(INFO_NEW_RATIO_INVERTED);
         }
-
         // Check for inverted parallelism
         if (getInvertedParallelismCount() > 0) {
             analysis.add(WARN_PARALLELISM_INVERTED);
         }
-
         // Check for inverted serialism
         if (getInvertedSerialismCount() > 0) {
             analysis.add(WARN_SERIALISM_INVERTED);
         }
-
         // Check for inverted serialism
         if (getSysGtUserCount() > 0) {
             analysis.add(WARN_SYS_GT_USER);
         }
-
-        // Check for diagnostic options enabled
-        if (jvm.getUnlockDiagnosticVmOptions() != null) {
-            analysis.add(INFO_DIAGNOSTIC_VM_OPTIONS_ENABLED);
-        }
-
-        // Check for JMX enabled
-        if (jvm.IsJmxEnabled()) {
-            analysis.add(INFO_JMX_ENABLED);
-        }
-    }
-
-    /**
-     * Do JVM options analysis.
-     */
-    private void doJvmOptionsAnalysis() {
-
-        // Check to see if thread stack size explicitly set
-        if (jvm.getThreadStackSizeOption() == null && !jvm.is64Bit()) {
-            analysis.add(WARN_THREAD_STACK_SIZE_NOT_SET);
-        }
-
-        // Check to see if min and max heap sizes are the same
-        if (!jvm.isMinAndMaxHeapSpaceEqual()) {
-            analysis.add(WARN_HEAP_MIN_NOT_EQUAL_MAX);
-            if (jvm.getUseAdaptiveSizePolicyDisabledOption() != null) {
-                analysis.add(ERROR_ADAPTIVE_SIZE_POLICY_DISABLED);
-            }
-        }
-
-        // Check to see if min and max perm gen sizes are the same
-        if (!jvm.isMinAndMaxPermSpaceEqual()) {
-            analysis.add(WARN_PERM_MIN_NOT_EQUAL_MAX);
-        }
-
         // Check to see if perm gen explicitly set
         if (analysis.contains(INFO_PERM_GEN)) {
-            if (jvm.getMinPermOption() == null && jvm.getMaxPermOption() == null) {
+            if (jvmOptions.getPermSize() == null && jvmOptions.getMaxPermSize() == null) {
                 analysis.add(WARN_PERM_SIZE_NOT_SET);
             }
-        }
-
-        // Check to see if explicit gc is disabled
-        if (jvm.getDisableExplicitGCOption() != null) {
-            analysis.add(WARN_EXPLICIT_GC_DISABLED);
-        }
-
-        // Check for large thread stack size
-        if (jvm.hasLargeThreadStackSize() && !jvm.is64Bit()) {
-            analysis.add(WARN_THREAD_STACK_SIZE_LARGE);
-        }
-
-        // Check for setting DGC intervals when explicit GC is disabled.
-        if (jvm.getDisableExplicitGCOption() != null && jvm.getRmiDgcClientGcIntervalOption() != null) {
-            analysis.add(WARN_RMI_DGC_CLIENT_GCINTERVAL_REDUNDANT);
-        }
-        if (jvm.getDisableExplicitGCOption() != null && jvm.getRmiDgcServerGcIntervalOption() != null) {
-            analysis.add(WARN_RMI_DGC_SERVER_GCINTERVAL_REDUNDANT);
-        }
-
-        // Check for small DGC intervals.
-        if (jvm.getRmiDgcClientGcIntervalOption() != null) {
-            long rmiDgcClientGcInterval = Long.parseLong(jvm.getRmiDgcClientGcIntervalValue());
-            if (rmiDgcClientGcInterval < 3_600_000) {
-                analysis.add(WARN_RMI_DGC_CLIENT_GCINTERVAL_SMALL);
-            } else if (rmiDgcClientGcInterval > 86_400_000) {
-                analysis.add(WARN_RMI_DGC_CLIENT_GCINTERVAL_LARGE);
+            // Check to see if min and max perm gen sizes are the same
+            if (jvmOptions != null) {
+                if (jvmOptions.getPermSize() != null && jvmOptions.getMaxPermSize() != null) {
+                    if (org.github.joa.util.JdkUtil.getByteOptionBytes(org.github.joa.util.JdkUtil.getByteOptionValue(
+                            jvmOptions.getPermSize())) != org.github.joa.util.JdkUtil.getByteOptionBytes(
+                                    org.github.joa.util.JdkUtil.getByteOptionValue(jvmOptions.getMaxPermSize()))) {
+                        analysis.add(WARN_PERM_MIN_NOT_EQUAL_MAX);
+                    }
+                }
             }
         }
-        if (jvm.getRmiDgcServerGcIntervalOption() != null) {
-            long rmiDgcServerGcInterval = Long.parseLong(jvm.getRmiDgcServerGcIntervalValue());
-            if (rmiDgcServerGcInterval < 3_600_000) {
-                analysis.add(WARN_RMI_DGC_SERVER_GCINTERVAL_SMALL);
-            } else if (rmiDgcServerGcInterval > 86_400_000) {
-                analysis.add(WARN_RMI_DGC_SERVER_GCINTERVAL_LARGE);
-            }
+        // Don't double report: If explicit gc detected, remove generic warning.
+        if (hasAnalysis(org.github.joa.util.Analysis.WARN_EXPLICIT_GC_NOT_CONCURRENT)
+                && (analysis.contains(ERROR_EXPLICIT_GC_SERIAL_G1)
+                        || analysis.contains(ERROR_EXPLICIT_GC_SERIAL_CMS))) {
+            jvmOptions.removeAnalysis(org.github.joa.util.Analysis.WARN_EXPLICIT_GC_NOT_CONCURRENT);
         }
-
-        // Check if explicit gc not detected, but JVM not configured to handle it concurrently.
-        if ((collectorFamilies.contains(CollectorFamily.CMS) || collectorFamilies.contains(CollectorFamily.G1))
-                && jvm.getDisableExplicitGCOption() == null && jvm.getExplicitGcInvokesConcurrentOption() == null
-                && !analysis.contains(ERROR_EXPLICIT_GC_SERIAL_G1)
-                && !analysis.contains(ERROR_EXPLICIT_GC_SERIAL_CMS)) {
-            analysis.add(WARN_EXPLICIT_GC_NOT_CONCURRENT);
-        }
-
-        // Specifying that explicit gc be collected concurrently makes no sense if explicit gc is disabled.
-        if (jvm.getDisableExplicitGCOption() != null && jvm.getExplicitGcInvokesConcurrentOption() != null) {
-            analysis.add(WARN_EXPLICIT_GC_DISABLED_CONCURRENT);
-        }
-
-        // Check to see if heap dump on OOME disabled or missing.
-        if (jvm.getHeapDumpOnOutOfMemoryErrorDisabledOption() != null) {
-            analysis.add(WARN_HEAP_DUMP_ON_OOME_DISABLED);
-        } else if (jvm.getHeapDumpOnOutOfMemoryErrorEnabledOption() == null) {
-            analysis.add(WARN_HEAP_DUMP_ON_OOME_MISSING);
-        }
-
-        // Check if heap dump path missing.
-        if (jvm.getHeapDumpOnOutOfMemoryErrorEnabledOption() != null && jvm.getHeapDumpPathOption() == null) {
-            analysis.add(INFO_HEAP_DUMP_PATH_MISSING);
-        }
-
-        // Check if instrumentation being used.
-        if (jvm.getJavaagentOption() != null) {
-            analysis.add(INFO_INSTRUMENTATION);
-        }
-
-        // Check if native library being used.
-        if (jvm.getAgentpathOption() != null) {
-            analysis.add(INFO_NATIVE);
-        }
-
-        // Check if background compilation disabled.
-        if (jvm.getXBatchOption() != null || jvm.getDisableBackgroundCompilationOption() != null) {
-            analysis.add(WARN_BYTECODE_BACKGROUND_COMPILE_DISABLED);
-        }
-
-        // Check if compilation being forced on first invocation.
-        if (jvm.getXCompOption() != null) {
-            analysis.add(WARN_BYTECODE_COMPILE_FIRST_INVOCATION);
-        }
-
-        // Check if just in time (JIT) compilation disabled.
-        if (jvm.getXIntOption() != null) {
-            analysis.add(WARN_BYTECODE_COMPILE_DISABLED);
-        }
-
         // Check for command line flags output.
-        if (jvm.getPrintCommandLineFlagsOption() == null && !getEventTypes().isEmpty()
-                && !UnifiedUtil.isUnifiedLogging(getEventTypes())
-                && !getEventTypes().contains(LogEventType.HEADER_COMMAND_LINE_FLAGS)) {
+        if (jvmOptions.getPrintCommandLineFlags() == null && !UnifiedUtil.isUnifiedLogging(getEventTypes())
+                && !getEventTypes().isEmpty() && !getEventTypes().contains(LogEventType.HEADER_COMMAND_LINE_FLAGS)) {
             analysis.add(WARN_PRINT_COMMANDLINE_FLAGS);
         }
 
-        // Check if print gc details option disabled
-        if (jvm.getPrintGCDetailsDisabled() != null) {
-            analysis.add(WARN_PRINT_GC_DETAILS_DISABLED);
-        } else {
-            // Check if print gc details option missing
-            if (!getEventTypes().isEmpty() && !UnifiedUtil.isUnifiedLogging(getEventTypes())
-                    && jvm.getPrintGCDetailsOption() == null) {
-                analysis.add(WARN_PRINT_GC_DETAILS_MISSING);
+        // Determine why PrintGCCause is missing
+        if (analysis.contains(WARN_PRINT_GC_CAUSE_NOT_ENABLED)) {
+            if (jvmOptions.getPrintGcCause() == null && jvmOptions.getJvmContext().getVersionMajor() == 7) {
+                analysis.add(WARN_PRINT_GC_CAUSE_MISSING);
+                analysis.remove(WARN_PRINT_GC_CAUSE_NOT_ENABLED);
             }
-        }
-
-        // Check if CMS not being used for old collections
-        if (jvm.getUseParNewGCOption() != null && jvm.getUseConcMarkSweepGCOption() == null) {
-            analysis.add(ERROR_CMS_SERIAL_OLD);
-        }
-
-        // Check if CMS handling Perm/Metaspace collections is explictily disabled or just not set.
-        if (jvm.getCMSClassUnloadingDisabled() != null) {
-            // Explicitly disabled.
-            analysis.add(WARN_CMS_CLASS_UNLOADING_DISABLED);
-            //
-            if (analysis.contains(WARN_CMS_CLASS_UNLOADING_NOT_ENABLED)) {
-                analysis.remove(WARN_CMS_CLASS_UNLOADING_NOT_ENABLED);
-            }
-        } else {
-            // Not enabled
-            if ((collectorFamilies.contains(CollectorFamily.CMS) && jvm.getCMSClassUnloadingEnabled() == null)) {
-                if (!analysis.contains(WARN_CMS_CLASS_UNLOADING_NOT_ENABLED)) {
-                    analysis.add(WARN_CMS_CLASS_UNLOADING_NOT_ENABLED);
-                }
-            }
-        }
-
-        // Check for -XX:+PrintReferenceGC.
-        if (jvm.getPrintReferenceGC() != null && !analysis.contains(WARN_PRINT_REFERENCE_GC_ENABLED)) {
-            analysis.add(WARN_PRINT_REFERENCE_GC_ENABLED);
-        }
-
-        // Check for -XX:+PrintGCCause missing.
-        if (jvm.getPrintGCCause() == null && jvm.JdkNumber() == 7 && !analysis.contains(WARN_PRINT_GC_CAUSE_MISSING)) {
-            analysis.add(WARN_PRINT_GC_CAUSE_MISSING);
-            // Don't double report
-            if (analysis.contains(WARN_PRINT_GC_CAUSE_NOT_ENABLED)) {
+            if (org.github.joa.util.JdkUtil.isOptionDisabled(jvmOptions.getPrintGcCause())) {
+                analysis.add(WARN_PRINT_GC_CAUSE_DISABLED);
                 analysis.remove(WARN_PRINT_GC_CAUSE_NOT_ENABLED);
             }
         }
-
-        // Check for -XX:-PrintGCCause (PrintGCCause disabled).
-        if (jvm.getPrintGCCauseDisabled() != null) {
-            analysis.add(WARN_PRINT_GC_CAUSE_DISABLED);
-            // Don't double report
-            if (analysis.contains(WARN_PRINT_GC_CAUSE_NOT_ENABLED)) {
-                analysis.remove(WARN_PRINT_GC_CAUSE_NOT_ENABLED);
-            }
-        }
-
-        // Check for -XX:+TieredCompilation.
-        if (jvm.getTieredCompilation() != null) {
-            analysis.add(WARN_TIERED_COMPILATION_ENABLED);
-        }
-
-        // Check for -XX:+PrintStringDeduplicationStatistics.
-        if (jvm.getPrintStringDeduplicationStatistics() != null) {
-            analysis.add(WARN_PRINT_STRING_DEDUP_STATS_ENABLED);
-        }
-
         // Check for incremental mode in combination with -XX:CMSInitiatingOccupancyFraction=<n>.
-        if (analysis.contains(WARN_CMS_INCREMENTAL_MODE) && jvm.getCMSInitiatingOccupancyFraction() != null) {
+        if (analysis.contains(WARN_CMS_INCREMENTAL_MODE) && jvmOptions.getCmsInitiatingOccupancyFraction() != null) {
             analysis.add(WARN_CMS_INC_MODE_WITH_INIT_OCCUP_FRACT);
         }
-
-        // Check for biased locking disabled with -XX:-UseBiasedLocking.
-        if (jvm.getBiasedLockingDisabled() != null && !collectorFamilies.contains(CollectorFamily.SHENANDOAH)) {
-            analysis.add(WARN_BIASED_LOCKING_DISABLED);
+        // Check events for outputting application concurrent time
+        if (!jvmOptions.hasAnalysis(org.github.joa.util.Analysis.INFO_PRINT_GC_APPLICATION_CONCURRENT_TIME)
+                && getEventTypes().contains(LogEventType.APPLICATION_CONCURRENT_TIME)) {
+            jvmOptions.addAnalysis(org.github.joa.util.Analysis.INFO_PRINT_GC_APPLICATION_CONCURRENT_TIME);
         }
-
-        // Check for print class histogram output enabled with -XX:+PrintClassHistogram,
-        // -XX:+PrintClassHistogramBeforeFullGC, or -XX:+PrintClassHistogramAfterFullGC.
-        if (jvm.getPrintClassHistogramEnabled() != null) {
-            analysis.add(WARN_PRINT_CLASS_HISTOGRAM);
+        // Check events for trace class unloading enabled
+        if (!jvmOptions.hasAnalysis(org.github.joa.util.Analysis.INFO_TRACE_CLASS_UNLOADING)
+                && getEventTypes().contains(LogEventType.CLASS_UNLOADING)) {
+            jvmOptions.addAnalysis(org.github.joa.util.Analysis.INFO_TRACE_CLASS_UNLOADING);
         }
-        if (jvm.getPrintClassHistogramAfterFullGcEnabled() != null) {
-            analysis.add(WARN_PRINT_CLASS_HISTOGRAM_AFTER_FULL_GC);
-        }
-        if (jvm.getPrintClassHistogramBeforeFullGcEnabled() != null) {
-            analysis.add(WARN_PRINT_CLASS_HISTOGRAM_BEFORE_FULL_GC);
-        }
-
-        // Check for outputting application concurrent time
-        if (!analysis.contains(WARN_PRINT_GC_APPLICATION_CONCURRENT_TIME)) {
-            if (jvm.getPrintGcApplicationConcurrentTime() != null) {
-                analysis.add(WARN_PRINT_GC_APPLICATION_CONCURRENT_TIME);
-            }
-        }
-
-        // Check for trace class unloading enabled with -XX:+TraceClassUnloading
-        if (!analysis.contains(WARN_TRACE_CLASS_UNLOADING)) {
-            if (jvm.getTraceClassUnloading() != null) {
-                analysis.add(WARN_TRACE_CLASS_UNLOADING);
-            }
-        }
-
-        // Compressed object references should only be used when heap < 32G
-        boolean heapLessThan32G = jvm.getMaxHeapBytes().lessThan(gigabytes(32));
-
-        if (heapLessThan32G) {
-            // Should use compressed object pointers
-            if (jvm.getUseCompressedOopsDisabled() != null) {
-
-                if (jvm.getMaxHeapBytes().isZero()) {
-                    // Heap size unknown
-                    analysis.add(WARN_COMP_OOPS_DISABLED_HEAP_UNK);
-                } else {
-                    // Heap < 32G
-                    analysis.add(ERROR_COMP_OOPS_DISABLED_HEAP_LT_32G);
-                }
-                if (jvm.getCompressedClassSpaceSizeOption() != null) {
-                    analysis.add(INFO_COMP_CLASS_SIZE_COMP_OOPS_DISABLED);
-                }
-            }
-
-            // Should use compressed class pointers
-            if (jvm.getUseCompressedClassPointersDisabled() != null) {
-                if (jvm.getMaxHeapBytes().isZero()) {
-                    // Heap size unknown
-                    analysis.add(WARN_COMP_CLASS_DISABLED_HEAP_UNK);
-                } else {
-                    // Heap < 32G
-                    analysis.add(ERROR_COMP_CLASS_DISABLED_HEAP_LT_32G);
-                }
-                if (jvm.getCompressedClassSpaceSizeOption() != null) {
-                    analysis.add(INFO_COMP_CLASS_SIZE_COMP_CLASS_DISABLED);
-                }
-            }
-        } else {
-            // Should not use compressed object pointers
-            if (jvm.getUseCompressedOopsEnabled() != null) {
-                analysis.add(ERROR_COMP_OOPS_ENABLED_HEAP_GT_32G);
-            }
-
-            // Should not use compressed class pointers
-            if (jvm.getUseCompressedClassPointersEnabled() != null) {
-                analysis.add(ERROR_COMP_CLASS_ENABLED_HEAP_GT_32G);
-            }
-
-            // Should not be setting class pointer space size
-            if (jvm.getCompressedClassSpaceSizeOption() != null) {
-                analysis.add(ERROR_COMP_CLASS_SIZE_HEAP_GT_32G);
-            }
-        }
-
-        // Check for PrintFLSStatistics option is being used
-        if (jvm.getPrintFLStatistics() != null && !analysis.contains(INFO_PRINT_FLS_STATISTICS)) {
-            analysis.add(INFO_PRINT_FLS_STATISTICS);
-        }
-
-        // Check if PAR_NEW collector disabled
-        if (jvm.getUseParNewGcDisabled() != null && !analysis.contains(WARN_CMS_PAR_NEW_DISABLED)) {
-            analysis.add(WARN_CMS_PAR_NEW_DISABLED);
-        }
-
-        // Check if log file rotation disabled or missing
-        if (jvm.getUseGcLogFileRotationDisabled() != null) {
-            analysis.add(INFO_GC_LOG_FILE_ROTATION_DISABLED);
-            if (jvm.getGcLogFileName() != null && !jvm.getGcLogFileName().contains("%")) {
-                analysis.add(WARN_GC_LOG_FILE_OVERWRITE);
-            }
-        } else {
-            if (jvm.getUseGcLogFileRotationEnabled() == null && !jvm.isGcLoggingToStdout()
-                    && ((jvm.JdkNumber() >= 5 && jvm.JdkNumber() <= 8)
-                            || !getEventTypes().isEmpty() && !UnifiedUtil.isUnifiedLogging(getEventTypes()))) {
-                analysis.add(INFO_GC_LOG_FILE_ROTATION_NOT_ENABLED);
-                if (jvm.getGcLogFileName() != null && !jvm.getGcLogFileName().contains("%")) {
-                    analysis.add(WARN_GC_LOG_FILE_OVERWRITE);
-                }
-            }
-        }
-
-        // Check if number of log files specified with log file rotation disabled
-        if (jvm.getNumberOfGcLogFiles() != null && jvm.getUseGcLogFileRotationDisabled() != null) {
-            analysis.add(WARN_GC_LOG_FILE_NUM_ROTATION_DISABLED);
-        }
-
-        // Check if log file size is small
-        if (jvm.getGcLogFileSize() != null) {
-            if (jvm.getGcLogFileSizeBytes().lessThan(megabytes(5))) {
-                analysis.add(WARN_GC_LOG_FILE_SIZE_SMALL);
-            }
-        }
-
-        // Check if gc logging being sent to stdout
-        if (jvm.isGcLoggingToStdout()) {
-            analysis.add(INFO_GC_LOG_STDOUT);
-        }
-
-        // If explicit gc is disabled, don't need to set explicit gc options
-        if (jvm.getExplicitGcInvokesConcurrentAndUnloadsClassesDisabled() != null
-                && jvm.getDisableExplicitGCOption() != null) {
-            analysis.add(INFO_CRUFT_EXP_GC_INV_CON_AND_UNL_CLA);
-        }
-
-        // Check for class unloading disabled
-        if (jvm.getClassUnloadingDisabled() != null) {
-            analysis.add(WARN_CLASS_UNLOADING_DISABLED);
-        }
-
-        // Check for -XX:+PrintPromotionFailure option being used
-        if (jvm.getPrintPromotionFailureEnabled() != null && !analysis.contains(INFO_PRINT_PROMOTION_FAILURE)) {
-            analysis.add(INFO_PRINT_PROMOTION_FAILURE);
-        }
-
-        // Check for -XX:+UseMembar option being used
-        if (jvm.getUseMembarEnabled() != null) {
-            analysis.add(WARN_USE_MEMBAR);
-        }
-
-        // Check for -XX:-PrintAdaptiveSizePolicy option being used
-        if (jvm.getPrintAdaptiveResizePolicyDisabled() != null) {
-            analysis.add(INFO_PRINT_ADAPTIVE_RESIZE_PLCY_DISABLED);
-        }
-
-        // Check for -XX:+PrintAdaptiveSizePolicy option being used
-        if (jvm.getPrintAdaptiveResizePolicyEnabled() != null) {
-            analysis.add(INFO_PRINT_ADAPTIVE_RESIZE_PLCY_ENABLED);
-        }
-
-        // Check for-XX:CMSInitiatingOccupancyFraction without -XX:+UseCMSInitiatingOccupancyOnly.
-        if (jvm.getCMSInitiatingOccupancyFraction() != null && jvm.getCMSInitiatingOccupancyOnlyEnabled() == null) {
-            analysis.add(WARN_CMS_INIT_OCCUPANCY_ONLY_MISSING);
-        }
-
-        // Check for tenuring disabled or default overriden
-        if (jvm.getMaxTenuringThresholdOption() != null) {
-            String maxTenuringThreshold = JdkUtil.getOptionValue(jvm.getMaxTenuringThresholdOption());
-            if (maxTenuringThreshold != null) {
-                int tenuring = Integer.parseInt(maxTenuringThreshold);
-                if (tenuring == 0) {
-                    analysis.add(WARN_TENURING_DISABLED);
-                } else if (tenuring != 15) {
-                    analysis.add(INFO_MAX_TENURING_OVERRIDE);
-                }
-            }
-        }
-
-        // Check for -XX:SurvivorRatio option being used
-        if (jvm.getSurvivorRatio() != null) {
-            analysis.add(INFO_SURVIVOR_RATIO);
-        }
-
-        // Check for -XX:TargetSurvivorRatio option being used
-        if (jvm.getTargetSurvivorRatio() != null) {
-            analysis.add(INFO_SURVIVOR_RATIO_TARGET);
-        }
-
-        // Check for experimental options being used
-        if (jvm.getUnlockExperimentalVmOptionsEnabled() != null) {
-            analysis.add(INFO_EXPERIMENTAL_VM_OPTIONS);
-        }
-        // Only report fast unordered timestamps if explicity set. If the JVM sets it via ergonomics,
-        // -XX:+UnlockExperimentalVMOptions will not be in the gc log header.
-        if (jvm.getUseFastUnorderedTimeStampsEnabled() != null && jvm.getUnlockExperimentalVmOptionsEnabled() != null) {
-            analysis.add(WARN_FAST_UNORDERED_TIMESTAMPS);
-            // Don't double report
-            if (analysis.contains(INFO_EXPERIMENTAL_VM_OPTIONS)) {
-                analysis.remove(INFO_EXPERIMENTAL_VM_OPTIONS);
-            }
-        }
-        if (jvm.getG1MixedGCLiveThresholdPercent() != null) {
-            analysis.add(WARN_G1_MIXED_GC_LIVE_THRSHOLD_PRCNT);
-            // Don't double report
-            if (analysis.contains(INFO_EXPERIMENTAL_VM_OPTIONS)) {
-                analysis.remove(INFO_EXPERIMENTAL_VM_OPTIONS);
-            }
-        }
-        if (jvm.getUseCGroupMemoryLimitForHeap() != null) {
-            analysis.add(WARN_CGROUP_MEMORY_LIMIT);
-            // Don't double report
-            if (analysis.contains(INFO_EXPERIMENTAL_VM_OPTIONS)) {
-                analysis.remove(INFO_EXPERIMENTAL_VM_OPTIONS);
-            }
-        }
-
-        // Check for JDK < u40 recommendations (require experimental options)
-        if ((collectorFamilies.contains(CollectorFamily.G1) || jvm.getUseG1Gc() != null) && jvm.JdkNumber() == 8
-                && jvm.JdkUpdate() < 40) {
-            if (jvm.getG1MixedGCLiveThresholdPercent() == null
-                    || !jvm.getG1MixedGCLiveThresholdPercentValue().equals("85") || jvm.getG1HeapWastePercent() == null
-                    || !jvm.getG1HeapWastePercentValue().equals("5")) {
-                analysis.add(WARN_G1_JDK8_PRIOR_U40_RECS);
-                if (analysis.contains(INFO_EXPERIMENTAL_VM_OPTIONS)) {
-                    analysis.remove(INFO_EXPERIMENTAL_VM_OPTIONS);
-                }
-            }
-        }
-
-        // Check for multi-threaded CMS initial mark disabled
-        if (jvm.getCmsParallelInitialMarkDisabled() != null
-                && !analysis.contains(ERROR_CMS_PARALLEL_INITIAL_MARK_DISABLED)) {
-            analysis.add(ERROR_CMS_PARALLEL_INITIAL_MARK_DISABLED);
-        }
-
-        // Check for multi-threaded CMS remark disabled
-        if (jvm.getCmsParallelRemarkDisabled() != null && !analysis.contains(ERROR_CMS_PARALLEL_REMARK_DISABLED)) {
-            analysis.add(ERROR_CMS_PARALLEL_REMARK_DISABLED);
-        }
-
-        // Check if summarized remembered set processing information being output
-        if (collectorFamilies.contains(CollectorFamily.G1) && jvm.getG1SummarizeRSetStatsEnabled() != null
-                && jvm.getG1SummarizeRSetStatsPeriodValue() != null) {
-            int period = Integer.parseInt(jvm.getG1SummarizeRSetStatsPeriodValue());
-            if (period > 0) {
-                analysis.add(INFO_G1_SUMMARIZE_RSET_STATS_OUTPUT);
-            }
-        }
-
-        // Check if MaxMetaspaceSize is less than CompressedClassSpaceSize.
-        if (jvm.getMaxMetaspaceOption() != null) {
-            Memory compressedClassSpaceSize = Memory.ZERO;
-            if (jvm.getCompressedClassSpaceSizeOption() != null) {
-                compressedClassSpaceSize = jvm.getCompressedClassSpaceSizeBytes();
-            } else {
-                // Default is 1g
-                compressedClassSpaceSize = gigabytes(1);
-            }
-            if (jvm.getMaxMetaspaceBytes().lessThan(compressedClassSpaceSize)) {
-                analysis.add(ERROR_METASPACE_SIZE_LT_COMP_CLASS_SIZE);
-            }
-        }
-
-        // Check if heap dump filename specified
-        if (jvm.getHeapDumpPathValue() != null && !jvm.getHeapDumpPathValue().matches("^\\s*[\\//]$")) {
-            analysis.add(WARN_HEAP_DUMP_PATH_FILENAME);
-        }
-
-        // Check for unaccounted disabled options
-        if (jvm.getUnaccountedDisabledOptions() != null) {
-            analysis.add(INFO_UNACCOUNTED_OPTIONS_DISABLED);
+        // Check events for PrintFLSStatistics
+        if (!jvmOptions.hasAnalysis(org.github.joa.util.Analysis.INFO_JDK8_PRINT_FLS_STATISTICS)
+                && getEventTypes().contains(LogEventType.FLS_STATISTICS)) {
+            jvmOptions.addAnalysis(org.github.joa.util.Analysis.INFO_JDK8_PRINT_FLS_STATISTICS);
         }
     }
 
@@ -965,16 +596,38 @@ public class JvmRun {
         return allocationRate;
     }
 
-    public List<Analysis> getAnalysis() {
-        return analysis;
+    /**
+     * @return Analysis as a <code>List</code> of String arrays with 2 elements, the first the key, the second the
+     *         display literal.
+     */
+    public List<String[]> getAnalysis() {
+        List<String[]> a = new ArrayList<String[]>();
+        Iterator<Analysis> itFelAnalysis = analysis.iterator();
+        while (itFelAnalysis.hasNext()) {
+            Analysis item = itFelAnalysis.next();
+            a.add(new String[] { item.getKey(), item.getValue() });
+        }
+        if (jvmOptions != null) {
+            Iterator<String[]> itJvmOptionsAnalysis = jvmOptions.getAnalysis().iterator();
+            while (itJvmOptionsAnalysis.hasNext()) {
+                String[] item = itJvmOptionsAnalysis.next();
+                a.add(item);
+            }
+        }
+        return a;
     }
 
     public int getBlockingEventCount() {
         return blockingEventCount;
     }
 
-    public List<CollectorFamily> getCollectorFamilies() {
-        return collectorFamilies;
+    /**
+     * @return The compressed class space in bytes, or 0 if not set.
+     */
+    public Memory getCompressedClassSpaceSizeBytes() {
+        return jvmOptions.getCompressedClassSpaceSize() == null ? Memory.ZERO
+                : Memory.fromOptionSize(
+                        org.github.joa.util.JdkUtil.getByteOptionValue(jvmOptions.getCompressedClassSpaceSize()));
     }
 
     public long getDurationGtRealCount() {
@@ -1097,8 +750,12 @@ public class JvmRun {
         return invertedSerialismCount;
     }
 
-    public Jvm getJvm() {
-        return jvm;
+    public String getJdkVersion() {
+        return jdkVersion;
+    }
+
+    public JvmOptions getJvmOptions() {
+        return jvmOptions;
     }
 
     /**
@@ -1156,6 +813,14 @@ public class JvmRun {
         return maxHeapAfterGc;
     }
 
+    /**
+     * @return The maximum heap space, or 0 if not set.
+     */
+    public Memory getMaxHeapBytes() {
+        return jvmOptions.getMaxHeapSize() == null ? Memory.ZERO
+                : Memory.fromOptionSize(org.github.joa.util.JdkUtil.getByteOptionValue(jvmOptions.getMaxHeapSize()));
+    }
+
     public Memory getMaxHeapOccupancy() {
         return maxHeapOccupancy;
     }
@@ -1172,12 +837,29 @@ public class JvmRun {
         return maxHeapSpaceNonBlocking;
     }
 
+    /**
+     * @return The maximum metaspace in bytes, or 0 if not set.
+     */
+    public Memory getMaxMetaspaceBytes() {
+        return jvmOptions.getMaxMetaspaceSize() == null ? Memory.ZERO
+                : Memory.fromOptionSize(
+                        org.github.joa.util.JdkUtil.getByteOptionValue(jvmOptions.getMaxMetaspaceSize()));
+    }
+
     public Memory getMaxOldSpace() {
         return maxOldSpace;
     }
 
     public Memory getMaxPermAfterGc() {
         return maxPermAfterGc;
+    }
+
+    /**
+     * @return The maximum perm space in bytes, or 0 if not set.
+     */
+    public Memory getMaxPermBytes() {
+        return jvmOptions.getMaxPermSize() == null ? Memory.ZERO
+                : Memory.fromOptionSize(org.github.joa.util.JdkUtil.getByteOptionValue(jvmOptions.getMaxPermSize()));
     }
 
     public Memory getMaxPermOccupancy() {
@@ -1201,6 +883,13 @@ public class JvmRun {
     }
 
     /**
+     * @return The JVM memory information.
+     */
+    public String getMemory() {
+        return memory;
+    }
+
+    /**
      * @return Ratio of old/young space sizes rounded to whole number.
      */
     public long getNewRatio() {
@@ -1216,6 +905,27 @@ public class JvmRun {
         return parallelCount;
     }
 
+    /**
+     * @return The percentage of swap that is free. 100 means no swap used. 0 means all swap used.
+     */
+    public long getPercentSwapFree() {
+        if (!swap.greaterThan(Memory.ZERO)) {
+            return 100L;
+        }
+        BigDecimal percentFree = new BigDecimal(swapFree.getValue(BYTES));
+        percentFree = percentFree.divide(new BigDecimal(swap.getValue(BYTES)), 2, RoundingMode.HALF_EVEN);
+        percentFree = percentFree.movePointRight(2);
+        return percentFree.longValue();
+    }
+
+    public Memory getPhysicalMemory() {
+        return physicalMemory;
+    }
+
+    public Memory getPhysicalMemoryFree() {
+        return physicalMemoryFree;
+    }
+
     public List<String> getSafepointBottlenecks() {
         return safepointBottlenecks;
     }
@@ -1226,6 +936,13 @@ public class JvmRun {
 
     public long getSerialCount() {
         return serialCount;
+    }
+
+    /**
+     * @return The date and time the JVM was started.
+     */
+    public Date getStartDate() {
+        return startDate;
     }
 
     public int getStoppedTimeEventCount() {
@@ -1256,6 +973,14 @@ public class JvmRun {
 
     public long getStoppedTimeTotal() {
         return stoppedTimeTotal;
+    }
+
+    public Memory getSwap() {
+        return swap;
+    }
+
+    public Memory getSwapFree() {
+        return swapFree;
     }
 
     public long getSysGtUserCount() {
@@ -1318,6 +1043,28 @@ public class JvmRun {
     }
 
     /**
+     * @param key
+     *            The <code>Analysis</code> to check.
+     * @return True if the <code>Analysis</code> exists, false otherwise.
+     */
+    public boolean hasAnalysis(Analysis key) {
+        return analysis.contains(key);
+    }
+
+    /**
+     * @param key
+     *            The <code>Analysis</code> to check.
+     * @return True if the <code>Analysis</code> exists, false otherwise.
+     */
+    public boolean hasAnalysis(org.github.joa.util.Analysis key) {
+        boolean hasAnalysis = false;
+        if (jvmOptions != null && jvmOptions.hasAnalysis(key)) {
+            hasAnalysis = true;
+        }
+        return hasAnalysis;
+    }
+
+    /**
      * @return true if there is data, false otherwise (e.g. no logging lines recognized).
      */
     public boolean haveData() {
@@ -1338,10 +1085,6 @@ public class JvmRun {
 
     public void setBlockingEventCount(int blockingEventCount) {
         this.blockingEventCount = blockingEventCount;
-    }
-
-    public void setCollectorFamilies(List<CollectorFamily> collectorFamilies) {
-        this.collectorFamilies = collectorFamilies;
     }
 
     public void setDurationGtRealCount(long durationGtRealCount) {
@@ -1388,8 +1131,12 @@ public class JvmRun {
         this.invertedSerialismCount = invertedSerialismCount;
     }
 
-    public void setJvm(Jvm jvm) {
-        this.jvm = jvm;
+    public void setJdkVersion(String jdkVersion) {
+        this.jdkVersion = jdkVersion;
+    }
+
+    public void setJvmOptions(JvmOptions jvmOptions) {
+        this.jvmOptions = jvmOptions;
     }
 
     public void setLastGcEvent(BlockingEvent lastGcEvent) {
@@ -1452,8 +1199,24 @@ public class JvmRun {
         this.maxYoungSpace = maxYoungSpace;
     }
 
+    /**
+     * @param memory
+     *            The JVM memory information to set.
+     */
+    public void setMemory(String memory) {
+        this.memory = memory;
+    }
+
     public void setParallelCount(long parallelCount) {
         this.parallelCount = parallelCount;
+    }
+
+    public void setPhysicalMemory(Memory physicalMemory) {
+        this.physicalMemory = physicalMemory;
+    }
+
+    public void setPhysicalMemoryFree(Memory physicalMemoryFree) {
+        this.physicalMemoryFree = physicalMemoryFree;
     }
 
     public void setPreprocessed(boolean preprocessed) {
@@ -1482,6 +1245,14 @@ public class JvmRun {
 
     public void setStoppedTimeTotal(long stoppedTimeTotal) {
         this.stoppedTimeTotal = stoppedTimeTotal;
+    }
+
+    public void setSwap(Memory swap) {
+        this.swap = swap;
+    }
+
+    public void setSwapFree(Memory swapFree) {
+        this.swapFree = swapFree;
     }
 
     public void setSysGtUserCount(long sysGtUserCount) {
