@@ -30,8 +30,10 @@ import org.eclipselabs.garbagecat.TestUtil;
 import org.eclipselabs.garbagecat.domain.JvmRun;
 import org.eclipselabs.garbagecat.service.GcManager;
 import org.eclipselabs.garbagecat.util.Constants;
-import org.eclipselabs.garbagecat.util.jdk.JdkUtil.CollectorFamily;
 import org.eclipselabs.garbagecat.util.jdk.JdkUtil.LogEventType;
+import org.github.joa.domain.Bit;
+import org.github.joa.domain.GarbageCollector;
+import org.github.joa.domain.JvmContext;
 import org.junit.jupiter.api.Test;
 
 /**
@@ -44,15 +46,14 @@ class TestAnalysis {
     void testAdaptiveSizePolicy() {
         String jvmOptions = "-XX:InitialHeapSize=2147483648 -XX:MaxHeapSize=8589934592 -XX:-UseAdaptiveSizePolicy";
         GcManager gcManager = new GcManager();
-        Jvm jvm = new Jvm(jvmOptions, null);
-        JvmRun jvmRun = gcManager.getJvmRun(jvm, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
+        JvmRun jvmRun = gcManager.getJvmRun(jvmOptions, null, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
         jvmRun.doAnalysis();
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.WARN_HEAP_MIN_NOT_EQUAL_MAX),
-                Analysis.WARN_HEAP_MIN_NOT_EQUAL_MAX + " analysis not identified.");
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.ERROR_ADAPTIVE_SIZE_POLICY_DISABLED),
-                Analysis.ERROR_ADAPTIVE_SIZE_POLICY_DISABLED + " analysis not identified.");
-        assertFalse(jvmRun.getAnalysis().contains(Analysis.INFO_UNACCOUNTED_OPTIONS_DISABLED),
-                Analysis.INFO_UNACCOUNTED_OPTIONS_DISABLED + " analysis incorrectly identified.");
+        assertTrue(jvmRun.hasAnalysis(org.github.joa.util.Analysis.INFO_HEAP_MIN_NOT_EQUAL_MAX),
+                org.github.joa.util.Analysis.INFO_HEAP_MIN_NOT_EQUAL_MAX + " analysis not identified.");
+        assertTrue(jvmRun.hasAnalysis(org.github.joa.util.Analysis.WARN_ADAPTIVE_SIZE_POLICY_DISABLED),
+                org.github.joa.util.Analysis.WARN_ADAPTIVE_SIZE_POLICY_DISABLED + " analysis not identified.");
+        assertFalse(jvmRun.getJvmOptions().hasAnalysis(org.github.joa.util.Analysis.INFO_UNACCOUNTED_OPTIONS_DISABLED),
+                org.github.joa.util.Analysis.INFO_UNACCOUNTED_OPTIONS_DISABLED + " analysis incorrectly identified.");
     }
 
     /**
@@ -67,11 +68,11 @@ class TestAnalysis {
         URI logFileUri = testFile.toURI();
         List<String> logLines = Files.readAllLines(Paths.get(logFileUri));
         gcManager.store(logLines, false);
-        JvmRun jvmRun = gcManager.getJvmRun(new Jvm(null, null), Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.WARN_PERM_SIZE_NOT_SET),
+        JvmRun jvmRun = gcManager.getJvmRun(null, null, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
+        assertTrue(jvmRun.hasAnalysis(Analysis.WARN_PERM_SIZE_NOT_SET),
                 Analysis.WARN_PERM_SIZE_NOT_SET + " analysis not identified.");
-        assertFalse(jvmRun.getAnalysis().contains(Analysis.WARN_EXPLICIT_GC_NOT_CONCURRENT),
-                Analysis.WARN_EXPLICIT_GC_NOT_CONCURRENT + " analysis not identified.");
+        assertFalse(jvmRun.hasAnalysis(org.github.joa.util.Analysis.WARN_EXPLICIT_GC_NOT_CONCURRENT),
+                org.github.joa.util.Analysis.WARN_EXPLICIT_GC_NOT_CONCURRENT + " analysis not identified.");
     }
 
     /**
@@ -87,85 +88,38 @@ class TestAnalysis {
         List<String> logLines = Files.readAllLines(Paths.get(logFileUri));
         logLines = gcManager.preprocess(logLines, null);
         gcManager.store(logLines, false);
-        JvmRun jvmRun = gcManager.getJvmRun(new Jvm(null, null), Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.WARN_APPLICATION_LOGGING),
+        JvmRun jvmRun = gcManager.getJvmRun(null, null, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
+        assertTrue(jvmRun.hasAnalysis(Analysis.WARN_APPLICATION_LOGGING),
                 Analysis.WARN_APPLICATION_LOGGING + " analysis not identified.");
-        assertTrue(jvmRun.getJvm().is64Bit(), "64-bit not identified.");
-        assertFalse(jvmRun.getAnalysis().contains(Analysis.WARN_THREAD_STACK_SIZE_NOT_SET),
-                Analysis.WARN_THREAD_STACK_SIZE_NOT_SET + " analysis incorrectly identified.");
+        assertEquals(Bit.BIT64, jvmRun.getJvmOptions().getJvmContext().getBit(), "64-bit not identified.");
+        assertFalse(jvmRun.hasAnalysis(org.github.joa.util.Analysis.WARN_THREAD_STACK_SIZE_NOT_SET_32),
+                org.github.joa.util.Analysis.WARN_THREAD_STACK_SIZE_NOT_SET_32 + " analysis incorrectly identified.");
 
     }
 
     @Test
     void testApplicationStoppedTimeMissingNoData() {
         GcManager gcManager = new GcManager();
-        Jvm jvm = new Jvm(null, null);
-        JvmRun jvmRun = gcManager.getJvmRun(jvm, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
+        JvmRun jvmRun = gcManager.getJvmRun(null, null, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
         List<LogEventType> eventTypes = new ArrayList<LogEventType>();
         eventTypes.add(LogEventType.UNKNOWN);
         jvmRun.setEventTypes(eventTypes);
         jvmRun.getAnalysis().clear();
         jvmRun.doAnalysis();
-        assertFalse(jvmRun.getAnalysis().contains(Analysis.WARN_APPLICATION_STOPPED_TIME_MISSING),
+        assertFalse(jvmRun.hasAnalysis(Analysis.WARN_APPLICATION_STOPPED_TIME_MISSING),
                 Analysis.WARN_APPLICATION_STOPPED_TIME_MISSING + " analysis incorrectly identified.");
-    }
-
-    /**
-     * Test analysis background compilation disabled.
-     */
-    @Test
-    void testBackgroundCompilationDisabled() {
-        String jvmOptions = "-Xss128k -XX:-BackgroundCompilation -Xms2048M";
-        GcManager gcManager = new GcManager();
-        Jvm jvm = new Jvm(jvmOptions, null);
-        JvmRun jvmRun = gcManager.getJvmRun(jvm, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.WARN_BYTECODE_BACKGROUND_COMPILE_DISABLED),
-                Analysis.WARN_BYTECODE_BACKGROUND_COMPILE_DISABLED + " analysis not identified.");
-    }
-
-    /**
-     * Test analysis background compilation disabled.
-     */
-    @Test
-    void testBackgroundCompilationDisabledXBatch() {
-        String jvmOptions = "-Xss128k -Xbatch -Xms2048M";
-        GcManager gcManager = new GcManager();
-        Jvm jvm = new Jvm(jvmOptions, null);
-        JvmRun jvmRun = gcManager.getJvmRun(jvm, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.WARN_BYTECODE_BACKGROUND_COMPILE_DISABLED),
-                Analysis.WARN_BYTECODE_BACKGROUND_COMPILE_DISABLED + " analysis not identified.");
-    }
-
-    @Test
-    void testBisasedLockingDisabled() {
-        String jvmOptions = "-Xss128k -XX:-UseBiasedLocking -Xms2048M";
-        GcManager gcManager = new GcManager();
-        Jvm jvm = new Jvm(jvmOptions, null);
-        JvmRun jvmRun = gcManager.getJvmRun(jvm, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        jvmRun.doAnalysis();
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.WARN_BIASED_LOCKING_DISABLED),
-                Analysis.WARN_BIASED_LOCKING_DISABLED + " analysis not identified.");
-        jvmRun.getAnalysis().clear();
-        List<CollectorFamily> collectorFamilies = new ArrayList<CollectorFamily>();
-        collectorFamilies.add(CollectorFamily.SHENANDOAH);
-        jvmRun.setCollectorFamilies(collectorFamilies);
-        jvmRun.doAnalysis();
-        assertFalse(jvmRun.getAnalysis().contains(Analysis.WARN_BIASED_LOCKING_DISABLED),
-                Analysis.WARN_BIASED_LOCKING_DISABLED + " analysis incorrectly identified.");
-
     }
 
     @Test
     void testCGroupMemoryLimit() {
         String jvmOptions = "-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap";
         GcManager gcManager = new GcManager();
-        Jvm jvm = new Jvm(jvmOptions, null);
-        JvmRun jvmRun = gcManager.getJvmRun(jvm, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
+        JvmRun jvmRun = gcManager.getJvmRun(jvmOptions, null, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
         jvmRun.doAnalysis();
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.WARN_CGROUP_MEMORY_LIMIT),
-                Analysis.WARN_CGROUP_MEMORY_LIMIT + " analysis not identified.");
-        assertFalse(jvmRun.getAnalysis().contains(Analysis.INFO_EXPERIMENTAL_VM_OPTIONS),
-                Analysis.INFO_EXPERIMENTAL_VM_OPTIONS + " analysis incorrectly identified.");
+        assertTrue(jvmRun.hasAnalysis(org.github.joa.util.Analysis.WARN_CGROUP_MEMORY_LIMIT),
+                org.github.joa.util.Analysis.WARN_CGROUP_MEMORY_LIMIT + " analysis not identified.");
+        assertTrue(jvmRun.hasAnalysis(org.github.joa.util.Analysis.WARN_EXPERIMENTAL_VM_OPTIONS_ENABLED),
+                org.github.joa.util.Analysis.WARN_EXPERIMENTAL_VM_OPTIONS_ENABLED + " analysis not identified.");
     }
 
     /**
@@ -180,51 +134,15 @@ class TestAnalysis {
         URI logFileUri = testFile.toURI();
         List<String> logLines = Files.readAllLines(Paths.get(logFileUri));
         gcManager.store(logLines, false);
-        JvmRun jvmRun = gcManager.getJvmRun(new Jvm(null, null), Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.WARN_CMS_CLASS_UNLOADING_DISABLED),
-                Analysis.WARN_CMS_CLASS_UNLOADING_DISABLED + " analysis not identified.");
-        assertFalse(jvmRun.getAnalysis().contains(Analysis.WARN_CMS_CLASS_UNLOADING_NOT_ENABLED),
+        JvmRun jvmRun = gcManager.getJvmRun(null, null, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
+        assertTrue(jvmRun.hasAnalysis(org.github.joa.util.Analysis.WARN_CMS_CLASS_UNLOADING_DISABLED),
+                org.github.joa.util.Analysis.WARN_CMS_CLASS_UNLOADING_DISABLED + " analysis not identified.");
+        assertFalse(jvmRun.hasAnalysis(Analysis.WARN_CMS_CLASS_UNLOADING_NOT_ENABLED),
                 Analysis.WARN_CMS_CLASS_UNLOADING_NOT_ENABLED + " analysis incorrectly identified.");
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.WARN_CLASS_UNLOADING_DISABLED),
-                Analysis.WARN_CLASS_UNLOADING_DISABLED + " analysis not identified.");
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.INFO_CRUFT_EXP_GC_INV_CON_AND_UNL_CLA),
-                Analysis.INFO_CRUFT_EXP_GC_INV_CON_AND_UNL_CLA + " analysis not identified.");
-    }
-
-    /**
-     * Test CMS being used to collect old generation.
-     */
-    @Test
-    void testCMSClassUnloadingEnabledMissing() {
-        String jvmOptions = "MGM";
-        GcManager gcManager = new GcManager();
-        Jvm jvm = new Jvm(jvmOptions, null);
-        JvmRun jvmRun = gcManager.getJvmRun(jvm, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        List<LogEventType> eventTypes = new ArrayList<LogEventType>();
-        eventTypes.add(LogEventType.CMS_CONCURRENT);
-        jvmRun.setEventTypes(eventTypes);
-        List<CollectorFamily> collectorFamilies = new ArrayList<CollectorFamily>();
-        collectorFamilies.add(CollectorFamily.CMS);
-        jvmRun.setCollectorFamilies(collectorFamilies);
-        jvmRun.doAnalysis();
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.WARN_CMS_CLASS_UNLOADING_NOT_ENABLED),
-                Analysis.WARN_CMS_CLASS_UNLOADING_NOT_ENABLED + " analysis not identified.");
-        assertFalse(jvmRun.getAnalysis().contains(Analysis.WARN_CMS_CLASS_UNLOADING_DISABLED),
-                Analysis.WARN_CMS_CLASS_UNLOADING_DISABLED + " analysis identified.");
-    }
-
-    /**
-     * Test CMS handling perm/metaspace collections.
-     */
-    @Test
-    void testCMSClassUnloadingEnabledMissingButNotCms() {
-        String jvmOptions = "MGM";
-        GcManager gcManager = new GcManager();
-        Jvm jvm = new Jvm(jvmOptions, null);
-        JvmRun jvmRun = gcManager.getJvmRun(jvm, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        jvmRun.doAnalysis();
-        assertFalse(jvmRun.getAnalysis().contains(Analysis.WARN_CMS_CLASS_UNLOADING_NOT_ENABLED),
-                Analysis.WARN_CMS_CLASS_UNLOADING_NOT_ENABLED + " analysis identified.");
+        assertTrue(jvmRun.hasAnalysis(org.github.joa.util.Analysis.WARN_CLASS_UNLOADING_DISABLED),
+                org.github.joa.util.Analysis.WARN_CLASS_UNLOADING_DISABLED + " analysis not identified.");
+        assertTrue(jvmRun.hasAnalysis(org.github.joa.util.Analysis.INFO_CRUFT_EXP_GC_INV_CON_AND_UNL_CLA),
+                org.github.joa.util.Analysis.INFO_CRUFT_EXP_GC_INV_CON_AND_UNL_CLA + " analysis not identified.");
     }
 
     /**
@@ -239,31 +157,9 @@ class TestAnalysis {
         URI logFileUri = testFile.toURI();
         List<String> logLines = Files.readAllLines(Paths.get(logFileUri));
         gcManager.store(logLines, false);
-        JvmRun jvmRun = gcManager.getJvmRun(new Jvm(null, null), Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.WARN_CMS_INITIAL_MARK_LOW_PARALLELISM),
+        JvmRun jvmRun = gcManager.getJvmRun(null, null, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
+        assertTrue(jvmRun.hasAnalysis(Analysis.WARN_CMS_INITIAL_MARK_LOW_PARALLELISM),
                 Analysis.WARN_CMS_INITIAL_MARK_LOW_PARALLELISM + " analysis not identified.");
-    }
-
-    @Test
-    void testCmsParallelInitialMarkDisabled() {
-        String jvmOptions = "-XX:-CMSParallelInitialMarkEnabled";
-        GcManager gcManager = new GcManager();
-        Jvm jvm = new Jvm(jvmOptions, null);
-        JvmRun jvmRun = gcManager.getJvmRun(jvm, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        jvmRun.doAnalysis();
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.ERROR_CMS_PARALLEL_INITIAL_MARK_DISABLED),
-                Analysis.ERROR_CMS_PARALLEL_INITIAL_MARK_DISABLED + " analysis not identified.");
-    }
-
-    @Test
-    void testCmsParallelRemarkDisabled() {
-        String jvmOptions = "-XX:-CMSParallelRemarkEnabled";
-        GcManager gcManager = new GcManager();
-        Jvm jvm = new Jvm(jvmOptions, null);
-        JvmRun jvmRun = gcManager.getJvmRun(jvm, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        jvmRun.doAnalysis();
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.ERROR_CMS_PARALLEL_REMARK_DISABLED),
-                Analysis.ERROR_CMS_PARALLEL_REMARK_DISABLED + " analysis not identified.");
     }
 
     /**
@@ -278,8 +174,8 @@ class TestAnalysis {
         URI logFileUri = testFile.toURI();
         List<String> logLines = Files.readAllLines(Paths.get(logFileUri));
         gcManager.store(logLines, false);
-        JvmRun jvmRun = gcManager.getJvmRun(new Jvm(null, null), Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.WARN_CMS_REMARK_LOW_PARALLELISM),
+        JvmRun jvmRun = gcManager.getJvmRun(null, null, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
+        assertTrue(jvmRun.hasAnalysis(Analysis.WARN_CMS_REMARK_LOW_PARALLELISM),
                 Analysis.WARN_CMS_REMARK_LOW_PARALLELISM + " analysis not identified.");
     }
 
@@ -296,7 +192,7 @@ class TestAnalysis {
         URI logFileUri = testFile.toURI();
         List<String> logLines = Files.readAllLines(Paths.get(logFileUri));
         gcManager.store(logLines, false);
-        JvmRun jvmRun = gcManager.getJvmRun(new Jvm(null, null), Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
+        JvmRun jvmRun = gcManager.getJvmRun(null, null, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
         assertEquals(2, jvmRun.getEventTypes().size(), "Event type count not correct.");
         assertFalse(jvmRun.getEventTypes().contains(LogEventType.UNKNOWN),
                 JdkUtil.LogEventType.UNKNOWN.toString() + " collector identified.");
@@ -304,9 +200,9 @@ class TestAnalysis {
                 "Log line not recognized as " + JdkUtil.LogEventType.CMS_SERIAL_OLD.toString() + ".");
         assertTrue(jvmRun.getEventTypes().contains(JdkUtil.LogEventType.PAR_NEW),
                 "Log line not recognized as " + JdkUtil.LogEventType.PAR_NEW.toString() + ".");
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.ERROR_EXPLICIT_GC_SERIAL_CMS),
+        assertTrue(jvmRun.hasAnalysis(Analysis.ERROR_EXPLICIT_GC_SERIAL_CMS),
                 Analysis.ERROR_EXPLICIT_GC_SERIAL_CMS + " analysis not identified.");
-        assertFalse(jvmRun.getAnalysis().contains(Analysis.ERROR_SERIAL_GC_CMS),
+        assertFalse(jvmRun.hasAnalysis(Analysis.ERROR_SERIAL_GC_CMS),
                 Analysis.ERROR_SERIAL_GC_CMS + " analysis incorrectly identified.");
     }
 
@@ -322,174 +218,16 @@ class TestAnalysis {
         URI logFileUri = testFile.toURI();
         List<String> logLines = Files.readAllLines(Paths.get(logFileUri));
         gcManager.store(logLines, false);
-        JvmRun jvmRun = gcManager.getJvmRun(new Jvm(null, null), Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.ERROR_CMS_PAR_NEW_GC_LOCKER_FAILED),
+        JvmRun jvmRun = gcManager.getJvmRun(null, null, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
+        assertTrue(jvmRun.hasAnalysis(Analysis.ERROR_CMS_PAR_NEW_GC_LOCKER_FAILED),
                 Analysis.ERROR_CMS_PAR_NEW_GC_LOCKER_FAILED + " analysis not identified.");
-        assertFalse(jvmRun.getAnalysis().contains(Analysis.WARN_PRINT_GC_CAUSE_NOT_ENABLED),
+        assertFalse(jvmRun.hasAnalysis(Analysis.WARN_PRINT_GC_CAUSE_NOT_ENABLED),
                 Analysis.WARN_PRINT_GC_CAUSE_NOT_ENABLED + " analysis incorrectly identified.");
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.INFO_GC_LOG_STDOUT),
-                Analysis.INFO_GC_LOG_STDOUT + " analysis not identified.");
-        assertFalse(jvmRun.getAnalysis().contains(Analysis.INFO_GC_LOG_FILE_ROTATION_NOT_ENABLED),
-                Analysis.INFO_GC_LOG_FILE_ROTATION_NOT_ENABLED + " analysis incorrectly identified.");
-    }
-
-    /**
-     * Test CMS being used to collect old generation.
-     */
-    @Test
-    void testCmsYoungCmsOld() {
-        String jvmOptions = "-Xss128k -XX:+UseParNewGC -XX:+UseConcMarkSweepGC -Xms2048M";
-        GcManager gcManager = new GcManager();
-        Jvm jvm = new Jvm(jvmOptions, null);
-        JvmRun jvmRun = gcManager.getJvmRun(jvm, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        jvmRun.doAnalysis();
-        assertFalse(jvmRun.getAnalysis().contains(Analysis.ERROR_CMS_SERIAL_OLD),
-                Analysis.ERROR_CMS_SERIAL_OLD + " analysis identified.");
-    }
-
-    /**
-     * Test CMS not being used to collect old generation.
-     */
-    @Test
-    void testCmsYoungSerialOld() {
-        String jvmOptions = "-Xss128k -XX:+UseParNewGC -Xms2048M";
-        GcManager gcManager = new GcManager();
-        Jvm jvm = new Jvm(jvmOptions, null);
-        JvmRun jvmRun = gcManager.getJvmRun(jvm, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        jvmRun.doAnalysis();
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.ERROR_CMS_SERIAL_OLD),
-                Analysis.ERROR_CMS_SERIAL_OLD + " analysis not identified.");
-    }
-
-    /**
-     * Test analysis just in time (JIT) compiler disabled.
-     */
-    @Test
-    void testCompilationDisabled() {
-        String jvmOptions = "-Xss128k -Xint -Xms2048M";
-        GcManager gcManager = new GcManager();
-        Jvm jvm = new Jvm(jvmOptions, null);
-        JvmRun jvmRun = gcManager.getJvmRun(jvm, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.WARN_BYTECODE_COMPILE_DISABLED),
-                Analysis.WARN_BYTECODE_COMPILE_DISABLED + " analysis not identified.");
-    }
-
-    /**
-     * Test analysis compilation on first invocation enabled.
-     */
-    @Test
-    void testCompilationOnFirstInvocation() {
-        String jvmOptions = "-Xss128k -Xcomp-Xms2048M";
-        GcManager gcManager = new GcManager();
-        Jvm jvm = new Jvm(jvmOptions, null);
-        JvmRun jvmRun = gcManager.getJvmRun(jvm, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.WARN_BYTECODE_COMPILE_FIRST_INVOCATION),
-                Analysis.WARN_BYTECODE_COMPILE_FIRST_INVOCATION + " analysis not identified.");
-    }
-
-    @Test
-    void testCompressedClassPointersDisabledHeapLt32G() {
-        String jvmOptions = "-Xss128k -XX:-UseCompressedClassPointers -XX:+UseCompressedOops -Xmx2048M";
-        GcManager gcManager = new GcManager();
-        Jvm jvm = new Jvm(jvmOptions, null);
-        JvmRun jvmRun = gcManager.getJvmRun(jvm, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        jvmRun.doAnalysis();
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.ERROR_COMP_CLASS_DISABLED_HEAP_LT_32G),
-                Analysis.ERROR_COMP_CLASS_DISABLED_HEAP_LT_32G + " analysis not identified.");
-    }
-
-    @Test
-    void testCompressedClassPointersDisabledHeapUnknown() {
-        String jvmOptions = "-Xss128k -XX:-UseCompressedClassPointers -XX:+UseCompressedOops";
-        GcManager gcManager = new GcManager();
-        Jvm jvm = new Jvm(jvmOptions, null);
-        JvmRun jvmRun = gcManager.getJvmRun(jvm, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        jvmRun.doAnalysis();
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.WARN_COMP_CLASS_DISABLED_HEAP_UNK),
-                Analysis.WARN_COMP_CLASS_DISABLED_HEAP_UNK + " analysis not identified.");
-    }
-
-    @Test
-    void testCompressedClassPointersEnabledCompressedOopsDisabledHeapUnknown() {
-        String jvmOptions = "-Xss128k -XX:+UseCompressedClassPointers -XX:-UseCompressedOops -Xms2048M";
-        GcManager gcManager = new GcManager();
-        Jvm jvm = new Jvm(jvmOptions, null);
-        JvmRun jvmRun = gcManager.getJvmRun(jvm, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        jvmRun.doAnalysis();
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.WARN_COMP_OOPS_DISABLED_HEAP_UNK),
-                Analysis.WARN_COMP_OOPS_DISABLED_HEAP_UNK + " analysis not identified.");
-    }
-
-    @Test
-    void testCompressedClassPointersEnabledHeapGt32G() {
-        String jvmOptions = "-Xss128k -XX:+UseCompressedClassPointers -XX:+UseCompressedOops -Xmx32g";
-        GcManager gcManager = new GcManager();
-        Jvm jvm = new Jvm(jvmOptions, null);
-        JvmRun jvmRun = gcManager.getJvmRun(jvm, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        jvmRun.doAnalysis();
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.ERROR_COMP_CLASS_ENABLED_HEAP_GT_32G),
-                Analysis.ERROR_COMP_CLASS_ENABLED_HEAP_GT_32G + " analysis not identified.");
-    }
-
-    @Test
-    void testCompressedClassSpaceSizeWithCompressedClassPointersDisabledHeapUnknown() {
-        String jvmOptions = "-Xss128k -XX:CompressedClassSpaceSize=1G -XX:-UseCompressedClassPointers -Xms2048M";
-        GcManager gcManager = new GcManager();
-        Jvm jvm = new Jvm(jvmOptions, null);
-        JvmRun jvmRun = gcManager.getJvmRun(jvm, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        jvmRun.doAnalysis();
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.WARN_COMP_CLASS_DISABLED_HEAP_UNK),
-                Analysis.WARN_COMP_CLASS_DISABLED_HEAP_UNK + " analysis not identified.");
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.INFO_COMP_CLASS_SIZE_COMP_CLASS_DISABLED),
-                Analysis.INFO_COMP_CLASS_SIZE_COMP_CLASS_DISABLED + " analysis not identified.");
-    }
-
-    @Test
-    void testCompressedClassSpaceSizeWithCompressedOopsDisabledHeapUnknown() {
-        String jvmOptions = "-Xss128k -XX:CompressedClassSpaceSize=1G -XX:-UseCompressedOops -Xms2048M";
-        GcManager gcManager = new GcManager();
-        Jvm jvm = new Jvm(jvmOptions, null);
-        JvmRun jvmRun = gcManager.getJvmRun(jvm, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        jvmRun.doAnalysis();
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.WARN_COMP_OOPS_DISABLED_HEAP_UNK),
-                Analysis.WARN_COMP_OOPS_DISABLED_HEAP_UNK + " analysis not identified.");
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.INFO_COMP_CLASS_SIZE_COMP_OOPS_DISABLED),
-                Analysis.INFO_COMP_CLASS_SIZE_COMP_OOPS_DISABLED + " analysis not identified.");
-    }
-
-    @Test
-    void testCompressedOopsDisabledHeapEqual32G() {
-        String jvmOptions = "-Xss128k -XX:-UseCompressedOops -Xmx32G";
-        GcManager gcManager = new GcManager();
-        Jvm jvm = new Jvm(jvmOptions, null);
-        JvmRun jvmRun = gcManager.getJvmRun(jvm, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        jvmRun.doAnalysis();
-        assertFalse(jvmRun.getAnalysis().contains(Analysis.ERROR_COMP_OOPS_DISABLED_HEAP_LT_32G),
-                Analysis.ERROR_COMP_OOPS_DISABLED_HEAP_LT_32G + " analysis incorrectly identified.");
-        assertFalse(jvmRun.getAnalysis().contains(Analysis.WARN_COMP_OOPS_DISABLED_HEAP_UNK),
-                Analysis.WARN_COMP_OOPS_DISABLED_HEAP_UNK + " analysis incorrectly identified.");
-    }
-
-    @Test
-    void testCompressedOopsDisabledHeapGreater32G() {
-        String jvmOptions = "-Xss128k -XX:-UseCompressedOops -Xmx40G";
-        GcManager gcManager = new GcManager();
-        Jvm jvm = new Jvm(jvmOptions, null);
-        JvmRun jvmRun = gcManager.getJvmRun(jvm, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        jvmRun.doAnalysis();
-        assertFalse(jvmRun.getAnalysis().contains(Analysis.ERROR_COMP_OOPS_DISABLED_HEAP_LT_32G),
-                Analysis.ERROR_COMP_OOPS_DISABLED_HEAP_LT_32G + " analysis incorrectly identified.");
-    }
-
-    @Test
-    void testCompressedOopsDisabledHeapLess32G() {
-        String jvmOptions = "-Xss128k -XX:-UseCompressedOops -Xmx2048M";
-        GcManager gcManager = new GcManager();
-        Jvm jvm = new Jvm(jvmOptions, null);
-        JvmRun jvmRun = gcManager.getJvmRun(jvm, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        jvmRun.doAnalysis();
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.ERROR_COMP_OOPS_DISABLED_HEAP_LT_32G),
-                Analysis.ERROR_COMP_OOPS_DISABLED_HEAP_LT_32G + " analysis not identified.");
+        assertTrue(jvmRun.hasAnalysis(org.github.joa.util.Analysis.INFO_GC_LOG_STDOUT),
+                org.github.joa.util.Analysis.INFO_GC_LOG_STDOUT + " analysis not identified.");
+        assertFalse(jvmRun.hasAnalysis(org.github.joa.util.Analysis.WARN_JDK8_GC_LOG_FILE_ROTATION_NOT_ENABLED),
+                org.github.joa.util.Analysis.WARN_JDK8_GC_LOG_FILE_ROTATION_NOT_ENABLED
+                        + " analysis incorrectly identified.");
     }
 
     /**
@@ -504,76 +242,15 @@ class TestAnalysis {
         URI logFileUri = testFile.toURI();
         List<String> logLines = Files.readAllLines(Paths.get(logFileUri));
         gcManager.store(logLines, false);
-        JvmRun jvmRun = gcManager.getJvmRun(new Jvm(null, null), Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        assertEquals("45097156608", jvmRun.getJvm().getMaxHeapValue(), "Max heap value not parsed correctly.");
-        assertFalse(jvmRun.getAnalysis().contains(Analysis.ERROR_COMP_OOPS_DISABLED_HEAP_LT_32G),
-                Analysis.ERROR_COMP_OOPS_DISABLED_HEAP_LT_32G + " analysis incorrectly identified.");
-        assertFalse(jvmRun.getAnalysis().contains(Analysis.ERROR_COMP_OOPS_ENABLED_HEAP_GT_32G),
-                Analysis.ERROR_COMP_OOPS_ENABLED_HEAP_GT_32G + " analysis incorrectly identified.");
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.ERROR_COMP_CLASS_SIZE_HEAP_GT_32G),
-                Analysis.ERROR_COMP_CLASS_SIZE_HEAP_GT_32G + " analysis not identified.");
-    }
-
-    @Test
-    void testCompressedOopsEnabledHeapGreater32G() {
-        String jvmOptions = "-Xss128k -XX:+UseCompressedOops -Xmx40G";
-        GcManager gcManager = new GcManager();
-        Jvm jvm = new Jvm(jvmOptions, null);
-        JvmRun jvmRun = gcManager.getJvmRun(jvm, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        jvmRun.doAnalysis();
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.ERROR_COMP_OOPS_ENABLED_HEAP_GT_32G),
-                Analysis.ERROR_COMP_OOPS_ENABLED_HEAP_GT_32G + " analysis not identified.");
-    }
-
-    /**
-     * Test analysis not small DGC intervals.
-     */
-    @Test
-    void testDgcLargeIntervals() {
-        String jvmOptions = "-Dsun.rmi.dgc.client.gcInterval=9223372036854775807 "
-                + "-Dsun.rmi.dgc.server.gcInterval=9223372036854775807";
-        GcManager gcManager = new GcManager();
-        Jvm jvm = new Jvm(jvmOptions, null);
-        JvmRun jvmRun = gcManager.getJvmRun(jvm, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        assertFalse(jvmRun.getAnalysis().contains(Analysis.WARN_RMI_DGC_CLIENT_GCINTERVAL_SMALL),
-                Analysis.WARN_RMI_DGC_CLIENT_GCINTERVAL_SMALL + " analysis identified.");
-        assertFalse(jvmRun.getAnalysis().contains(Analysis.WARN_RMI_DGC_SERVER_GCINTERVAL_SMALL),
-                Analysis.WARN_RMI_DGC_SERVER_GCINTERVAL_SMALL + " analysis identified.");
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.WARN_RMI_DGC_CLIENT_GCINTERVAL_LARGE),
-                Analysis.WARN_RMI_DGC_CLIENT_GCINTERVAL_SMALL + " analysis not identified.");
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.WARN_RMI_DGC_SERVER_GCINTERVAL_LARGE),
-                Analysis.WARN_RMI_DGC_SERVER_GCINTERVAL_SMALL + " analysis not identified.");
-    }
-
-    /**
-     * Test DGC redundant options analysis.
-     */
-    @Test
-    void testDgcRedundantOptions() {
-        String jvmOptions = "-XX:+DisableExplicitGC -Dsun.rmi.dgc.client.gcInterval=14400000 "
-                + "-Dsun.rmi.dgc.server.gcInterval=24400000";
-        GcManager gcManager = new GcManager();
-        Jvm jvm = new Jvm(jvmOptions, null);
-        JvmRun jvmRun = gcManager.getJvmRun(jvm, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.WARN_RMI_DGC_CLIENT_GCINTERVAL_REDUNDANT),
-                Analysis.WARN_RMI_DGC_CLIENT_GCINTERVAL_REDUNDANT + " analysis not identified.");
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.WARN_RMI_DGC_SERVER_GCINTERVAL_REDUNDANT),
-                Analysis.WARN_RMI_DGC_SERVER_GCINTERVAL_REDUNDANT + " analysis not identified.");
-    }
-
-    /**
-     * Test analysis small DGC intervals
-     */
-    @Test
-    void testDgcSmallIntervals() {
-        String jvmOptions = "-Dsun.rmi.dgc.client.gcInterval=3599999 -Dsun.rmi.dgc.server.gcInterval=3599999";
-        GcManager gcManager = new GcManager();
-        Jvm jvm = new Jvm(jvmOptions, null);
-        JvmRun jvmRun = gcManager.getJvmRun(jvm, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.WARN_RMI_DGC_CLIENT_GCINTERVAL_SMALL),
-                Analysis.WARN_RMI_DGC_CLIENT_GCINTERVAL_SMALL + " analysis not identified.");
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.WARN_RMI_DGC_SERVER_GCINTERVAL_SMALL),
-                Analysis.WARN_RMI_DGC_SERVER_GCINTERVAL_SMALL + " analysis not identified.");
+        JvmRun jvmRun = gcManager.getJvmRun(null, null, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
+        assertEquals("-XX:MaxHeapSize=45097156608", jvmRun.getJvmOptions().getMaxHeapSize(),
+                "Max heap value not parsed correctly.");
+        assertFalse(jvmRun.hasAnalysis(org.github.joa.util.Analysis.WARN_COMP_OOPS_DISABLED_HEAP_LT_32G),
+                org.github.joa.util.Analysis.WARN_COMP_OOPS_DISABLED_HEAP_LT_32G + " analysis incorrectly identified.");
+        assertFalse(jvmRun.hasAnalysis(org.github.joa.util.Analysis.WARN_COMP_OOPS_ENABLED_HEAP_GT_32G),
+                org.github.joa.util.Analysis.WARN_COMP_OOPS_ENABLED_HEAP_GT_32G + " analysis incorrectly identified.");
+        assertTrue(jvmRun.hasAnalysis(org.github.joa.util.Analysis.WARN_COMP_CLASS_SIZE_HEAP_GT_32G),
+                org.github.joa.util.Analysis.WARN_COMP_CLASS_SIZE_HEAP_GT_32G + " analysis not identified.");
     }
 
     /**
@@ -588,36 +265,11 @@ class TestAnalysis {
         URI logFileUri = testFile.toURI();
         List<String> logLines = Files.readAllLines(Paths.get(logFileUri));
         gcManager.store(logLines, false);
-        JvmRun jvmRun = gcManager.getJvmRun(new Jvm(null, null), Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.INFO_JMX_ENABLED),
-                Analysis.INFO_JMX_ENABLED + " analysis not identified.");
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.INFO_DIAGNOSTIC_VM_OPTIONS_ENABLED),
-                Analysis.INFO_DIAGNOSTIC_VM_OPTIONS_ENABLED + " analysis not identified.");
-    }
-
-    /**
-     * Test DisableExplicitGC in combination with ExplicitGCInvokesConcurrent.
-     */
-    @Test
-    void testDisableExplictGcWithConcurrentHandling() {
-        String jvmOptions = "-Xss128k -XX:+DisableExplicitGC -XX:+ExplicitGCInvokesConcurrent -Xms2048M";
-        GcManager gcManager = new GcManager();
-        Jvm jvm = new Jvm(jvmOptions, null);
-        JvmRun jvmRun = gcManager.getJvmRun(jvm, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.WARN_EXPLICIT_GC_DISABLED_CONCURRENT),
-                Analysis.WARN_EXPLICIT_GC_DISABLED_CONCURRENT + " analysis not identified.");
-    }
-
-    @Test
-    void testExperimentalOptionsEnabled() {
-        String jvmOptions = "-XX:+UnlockExperimentalVMOptions -Xmx2048M";
-        GcManager gcManager = new GcManager();
-        Jvm jvm = new Jvm(jvmOptions, null);
-        jvm.setVersion("1.8.0_91-b14");
-        JvmRun jvmRun = gcManager.getJvmRun(jvm, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        jvmRun.doAnalysis();
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.INFO_EXPERIMENTAL_VM_OPTIONS),
-                Analysis.INFO_EXPERIMENTAL_VM_OPTIONS + " analysis not identified.");
+        JvmRun jvmRun = gcManager.getJvmRun(null, null, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
+        assertTrue(jvmRun.hasAnalysis(org.github.joa.util.Analysis.INFO_JMX_ENABLED),
+                org.github.joa.util.Analysis.INFO_JMX_ENABLED + " analysis not identified.");
+        assertTrue(jvmRun.hasAnalysis(org.github.joa.util.Analysis.INFO_DIAGNOSTIC_VM_OPTIONS_ENABLED),
+                org.github.joa.util.Analysis.INFO_DIAGNOSTIC_VM_OPTIONS_ENABLED + " analysis not identified.");
     }
 
     @Test
@@ -628,55 +280,15 @@ class TestAnalysis {
         List<String> logLines = Files.readAllLines(Paths.get(logFileUri));
         logLines = gcManager.preprocess(logLines, null);
         gcManager.store(logLines, false);
-        JvmRun jvmRun = gcManager.getJvmRun(new Jvm(null, null), Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
+        JvmRun jvmRun = gcManager.getJvmRun(null, null, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
         jvmRun.doAnalysis();
         assertEquals(1, jvmRun.getEventTypes().size(), "Event type count not correct.");
         assertFalse(jvmRun.getEventTypes().contains(LogEventType.UNKNOWN),
                 JdkUtil.LogEventType.UNKNOWN.toString() + " collector identified.");
         assertTrue(jvmRun.getEventTypes().contains(JdkUtil.LogEventType.G1_FULL_GC_PARALLEL),
                 "Log line not recognized as " + JdkUtil.LogEventType.G1_FULL_GC_PARALLEL.toString() + ".");
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.WARN_EXPLICIT_GC_DIAGNOSTIC),
+        assertTrue(jvmRun.hasAnalysis(Analysis.WARN_EXPLICIT_GC_DIAGNOSTIC),
                 Analysis.WARN_EXPLICIT_GC_DIAGNOSTIC + " analysis not identified.");
-    }
-
-    /**
-     * Test analysis explicit GC not concurrent.
-     */
-    @Test
-    void testExplicitGcNotConcurrentCms() {
-        String jvmOptions = "MGM";
-        GcManager gcManager = new GcManager();
-        Jvm jvm = new Jvm(jvmOptions, null);
-        JvmRun jvmRun = gcManager.getJvmRun(jvm, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        List<LogEventType> eventTypes = new ArrayList<LogEventType>();
-        eventTypes.add(LogEventType.CMS_CONCURRENT);
-        jvmRun.setEventTypes(eventTypes);
-        List<CollectorFamily> collectorFamilies = new ArrayList<CollectorFamily>();
-        collectorFamilies.add(CollectorFamily.CMS);
-        jvmRun.setCollectorFamilies(collectorFamilies);
-        jvmRun.doAnalysis();
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.WARN_EXPLICIT_GC_NOT_CONCURRENT),
-                Analysis.WARN_EXPLICIT_GC_NOT_CONCURRENT + " analysis not identified.");
-    }
-
-    /**
-     * Test analysis explicit GC not concurrent.
-     */
-    @Test
-    void testExplicitGcNotConcurrentG1() {
-        String jvmOptions = "MGM";
-        GcManager gcManager = new GcManager();
-        Jvm jvm = new Jvm(jvmOptions, null);
-        JvmRun jvmRun = gcManager.getJvmRun(jvm, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        List<LogEventType> eventTypes = new ArrayList<LogEventType>();
-        eventTypes.add(LogEventType.G1_FULL_GC_SERIAL);
-        jvmRun.setEventTypes(eventTypes);
-        List<CollectorFamily> collectorFamilies = new ArrayList<CollectorFamily>();
-        collectorFamilies.add(CollectorFamily.G1);
-        jvmRun.setCollectorFamilies(collectorFamilies);
-        jvmRun.doAnalysis();
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.WARN_EXPLICIT_GC_NOT_CONCURRENT),
-                Analysis.WARN_EXPLICIT_GC_NOT_CONCURRENT + " analysis not identified.");
     }
 
     @Test
@@ -686,13 +298,13 @@ class TestAnalysis {
         URI logFileUri = testFile.toURI();
         List<String> logLines = Files.readAllLines(Paths.get(logFileUri));
         gcManager.store(logLines, false);
-        JvmRun jvmRun = gcManager.getJvmRun(new Jvm(null, null), Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
+        JvmRun jvmRun = gcManager.getJvmRun(null, null, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
         assertEquals(1, jvmRun.getEventTypes().size(), "Event type count not correct.");
         assertFalse(jvmRun.getEventTypes().contains(LogEventType.UNKNOWN),
                 JdkUtil.LogEventType.UNKNOWN.toString() + " collector identified.");
         assertTrue(jvmRun.getEventTypes().contains(LogEventType.VM_WARNING),
                 JdkUtil.LogEventType.VM_WARNING.toString() + " collector identified.");
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.ERROR_SHARED_MEMORY_12),
+        assertTrue(jvmRun.hasAnalysis(Analysis.ERROR_SHARED_MEMORY_12),
                 Analysis.ERROR_SHARED_MEMORY_12 + " analysis identified.");
     }
 
@@ -708,9 +320,9 @@ class TestAnalysis {
         URI logFileUri = testFile.toURI();
         List<String> logLines = Files.readAllLines(Paths.get(logFileUri));
         gcManager.store(logLines, false);
-        JvmRun jvmRun = gcManager.getJvmRun(new Jvm(null, null), Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        assertFalse(jvmRun.getAnalysis().contains(Analysis.WARN_FAST_UNORDERED_TIMESTAMPS),
-                Analysis.WARN_FAST_UNORDERED_TIMESTAMPS + " analysis incorrectly identified.");
+        JvmRun jvmRun = gcManager.getJvmRun(null, null, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
+        assertFalse(jvmRun.hasAnalysis(org.github.joa.util.Analysis.WARN_FAST_UNORDERED_TIMESTAMPS),
+                org.github.joa.util.Analysis.WARN_FAST_UNORDERED_TIMESTAMPS + " analysis incorrectly identified.");
     }
 
     @Test
@@ -720,8 +332,8 @@ class TestAnalysis {
         URI logFileUri = testFile.toURI();
         List<String> logLines = Files.readAllLines(Paths.get(logFileUri));
         gcManager.store(logLines, false);
-        JvmRun jvmRun = gcManager.getJvmRun(new Jvm(null, null), Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        assertFalse(jvmRun.getAnalysis().contains(Analysis.INFO_FIRST_TIMESTAMP_THRESHOLD_EXCEEDED),
+        JvmRun jvmRun = gcManager.getJvmRun(null, null, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
+        assertFalse(jvmRun.hasAnalysis(Analysis.INFO_FIRST_TIMESTAMP_THRESHOLD_EXCEEDED),
                 Analysis.INFO_FIRST_TIMESTAMP_THRESHOLD_EXCEEDED + " analysis incorrectly identified.");
     }
 
@@ -738,11 +350,11 @@ class TestAnalysis {
         List<String> logLines = Files.readAllLines(Paths.get(logFileUri));
         logLines = gcManager.preprocess(logLines, null);
         gcManager.store(logLines, false);
-        JvmRun jvmRun = gcManager.getJvmRun(new Jvm(null, null), Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
+        JvmRun jvmRun = gcManager.getJvmRun(null, null, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
         assertEquals(5, jvmRun.getEventTypes().size(), "Event type count not correct.");
         assertFalse(jvmRun.getEventTypes().contains(LogEventType.UNKNOWN),
                 JdkUtil.LogEventType.UNKNOWN.toString() + " collector identified.");
-        assertFalse(jvmRun.getAnalysis().contains(Analysis.WARN_PRINT_HEAP_AT_GC),
+        assertFalse(jvmRun.hasAnalysis(Analysis.WARN_PRINT_HEAP_AT_GC),
                 Analysis.WARN_PRINT_HEAP_AT_GC + " analysis identified.");
     }
 
@@ -751,45 +363,10 @@ class TestAnalysis {
         String jvmOptions = "-XX:+UnlockExperimentalVMOptions -XX:+G1SummarizeRSetStats "
                 + "-XX:G1SummarizeRSetStatsPeriod=0";
         GcManager gcManager = new GcManager();
-        Jvm jvm = new Jvm(jvmOptions, null);
-        JvmRun jvmRun = gcManager.getJvmRun(jvm, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
+        JvmRun jvmRun = gcManager.getJvmRun(jvmOptions, null, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
         jvmRun.doAnalysis();
-        assertFalse(jvmRun.getAnalysis().contains(Analysis.INFO_G1_SUMMARIZE_RSET_STATS_OUTPUT),
-                Analysis.INFO_G1_SUMMARIZE_RSET_STATS_OUTPUT + " analysis incorrectly identified.");
-    }
-
-    @Test
-    void testGcLogFileRotationLoggingToStdout() {
-        // If -Xloggc is not used, output goes to stdout
-        String jvmOptions = "-XX:+PrintGC -XX:+PrintGCDateStamps -XX:+PrintGCDetails -XX:+PrintGCTimeStamps";
-        GcManager gcManager = new GcManager();
-        Jvm jvm = new Jvm(jvmOptions, null);
-        JvmRun jvmRun = gcManager.getJvmRun(jvm, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        jvmRun.getJvm().setVersion(" JRE (1.8.0_342-b07) ");
-        jvmRun.doAnalysis();
-        assertFalse(jvmRun.getAnalysis().contains(Analysis.INFO_GC_LOG_FILE_ROTATION_NOT_ENABLED),
-                Analysis.INFO_GC_LOG_FILE_ROTATION_NOT_ENABLED + " analysis incorrectly identified.");
-    }
-
-    @Test
-    void testGcLogFileRotationNotEnabled() {
-        String jvmOptions = "-XX:+UseG1";
-        GcManager gcManager = new GcManager();
-        Jvm jvm = new Jvm(jvmOptions, null);
-        JvmRun jvmRun = gcManager.getJvmRun(jvm, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        jvmRun.doAnalysis();
-        assertFalse(jvmRun.getAnalysis().contains(Analysis.INFO_GC_LOG_FILE_ROTATION_NOT_ENABLED),
-                Analysis.INFO_GC_LOG_FILE_ROTATION_NOT_ENABLED + " analysis incorrectly identified.");
-        jvmRun.getAnalysis().clear();
-        jvmRun.getEventTypes().add(LogEventType.PARALLEL_SCAVENGE);
-        jvmRun.doAnalysis();
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.INFO_GC_LOG_FILE_ROTATION_NOT_ENABLED),
-                Analysis.INFO_GC_LOG_FILE_ROTATION_NOT_ENABLED + " analysis not identified.");
-        jvmRun.getAnalysis().clear();
-        jvmRun.getEventTypes().add(LogEventType.UNIFIED_CONCURRENT);
-        jvmRun.doAnalysis();
-        assertFalse(jvmRun.getAnalysis().contains(Analysis.INFO_GC_LOG_FILE_ROTATION_NOT_ENABLED),
-                Analysis.INFO_GC_LOG_FILE_ROTATION_NOT_ENABLED + " analysis incorrectly identified.");
+        assertFalse(jvmRun.hasAnalysis(org.github.joa.util.Analysis.INFO_G1_SUMMARIZE_RSET_STATS_OUTPUT),
+                org.github.joa.util.Analysis.INFO_G1_SUMMARIZE_RSET_STATS_OUTPUT + " analysis incorrectly identified.");
     }
 
     /**
@@ -804,9 +381,9 @@ class TestAnalysis {
         URI logFileUri = testFile.toURI();
         List<String> logLines = Files.readAllLines(Paths.get(logFileUri));
         gcManager.store(logLines, false);
-        JvmRun jvmRun = gcManager.getJvmRun(new Jvm(null, null), Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.WARN_GC_LOG_FILE_SIZE_SMALL),
-                Analysis.WARN_GC_LOG_FILE_SIZE_SMALL + " analysis not identified.");
+        JvmRun jvmRun = gcManager.getJvmRun(null, null, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
+        assertTrue(jvmRun.hasAnalysis(org.github.joa.util.Analysis.WARN_JDK8_GC_LOG_FILE_SIZE_SMALL),
+                org.github.joa.util.Analysis.WARN_JDK8_GC_LOG_FILE_SIZE_SMALL + " analysis not identified.");
     }
 
     @Test
@@ -816,7 +393,7 @@ class TestAnalysis {
         URI logFileUri = testFile.toURI();
         List<String> logLines = Files.readAllLines(Paths.get(logFileUri));
         gcManager.store(logLines, false);
-        JvmRun jvmRun = gcManager.getJvmRun(new Jvm(null, null), Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
+        JvmRun jvmRun = gcManager.getJvmRun(null, null, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
         assertTrue(jvmRun.getEventTypes().contains(LogEventType.HEADER_COMMAND_LINE_FLAGS),
                 JdkUtil.LogEventType.HEADER_COMMAND_LINE_FLAGS.toString() + " information not identified.");
         assertTrue(jvmRun.getEventTypes().contains(LogEventType.HEADER_MEMORY),
@@ -824,38 +401,8 @@ class TestAnalysis {
         assertTrue(jvmRun.getEventTypes().contains(LogEventType.HEADER_VERSION),
                 JdkUtil.LogEventType.HEADER_VERSION.toString() + " information not identified.");
         // Usually no reason to set the thread stack size on 64 bit.
-        assertFalse(jvmRun.getAnalysis().contains(Analysis.WARN_THREAD_STACK_SIZE_NOT_SET),
-                Analysis.WARN_THREAD_STACK_SIZE_NOT_SET + " analysis incorrectly identified.");
-    }
-
-    /**
-     * Test analysis if heap dump on OOME enabled.
-     */
-    @Test
-    void testHeapDumpOnOutOfMemoryError() {
-        String jvmOptions = "MGM";
-        GcManager gcManager = new GcManager();
-        Jvm jvm = new Jvm(jvmOptions, null);
-        JvmRun jvmRun = gcManager.getJvmRun(jvm, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.WARN_HEAP_DUMP_ON_OOME_MISSING),
-                Analysis.WARN_HEAP_DUMP_ON_OOME_MISSING + " analysis not identified.");
-        assertFalse(jvmRun.getAnalysis().contains(Analysis.INFO_HEAP_DUMP_PATH_MISSING),
-                Analysis.INFO_HEAP_DUMP_PATH_MISSING + " analysis incorrectly identified.");
-    }
-
-    /**
-     * Test HeapDumpOnOutOfMemoryError disabled.
-     */
-    @Test
-    void testHeapDumpOnOutOfMemoryErrorDisabled() {
-        String jvmOptions = "-Xss128k -XX:-HeapDumpOnOutOfMemoryError -Xms2048M";
-        GcManager gcManager = new GcManager();
-        Jvm jvm = new Jvm(jvmOptions, null);
-        JvmRun jvmRun = gcManager.getJvmRun(jvm, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.WARN_HEAP_DUMP_ON_OOME_DISABLED),
-                Analysis.WARN_HEAP_DUMP_ON_OOME_DISABLED + " analysis not identified.");
-        assertFalse(jvmRun.getAnalysis().contains(Analysis.INFO_HEAP_DUMP_PATH_MISSING),
-                Analysis.INFO_HEAP_DUMP_PATH_MISSING + " analysis incorrectly identified.");
+        assertFalse(jvmRun.hasAnalysis(org.github.joa.util.Analysis.WARN_THREAD_STACK_SIZE_NOT_SET_32),
+                org.github.joa.util.Analysis.WARN_THREAD_STACK_SIZE_NOT_SET_32 + " analysis incorrectly identified.");
     }
 
     @Test
@@ -865,9 +412,9 @@ class TestAnalysis {
         URI logFileUri = testFile.toURI();
         List<String> logLines = Files.readAllLines(Paths.get(logFileUri));
         gcManager.store(logLines, false);
-        JvmRun jvmRun = gcManager.getJvmRun(new Jvm(null, null), Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.WARN_HEAP_DUMP_PATH_FILENAME),
-                Analysis.WARN_HEAP_DUMP_PATH_FILENAME + " analysis not identified.");
+        JvmRun jvmRun = gcManager.getJvmRun(null, null, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
+        assertTrue(jvmRun.hasAnalysis(org.github.joa.util.Analysis.WARN_HEAP_DUMP_PATH_FILENAME),
+                org.github.joa.util.Analysis.WARN_HEAP_DUMP_PATH_FILENAME + " analysis not identified.");
     }
 
     /**
@@ -882,9 +429,9 @@ class TestAnalysis {
         URI logFileUri = testFile.toURI();
         List<String> logLines = Files.readAllLines(Paths.get(logFileUri));
         gcManager.store(logLines, false);
-        JvmRun jvmRun = gcManager.getJvmRun(new Jvm(null, null), Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.INFO_HEAP_DUMP_PATH_MISSING),
-                Analysis.INFO_HEAP_DUMP_PATH_MISSING + " analysis not identified.");
+        JvmRun jvmRun = gcManager.getJvmRun(null, null, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
+        assertTrue(jvmRun.hasAnalysis(org.github.joa.util.Analysis.INFO_HEAP_DUMP_PATH_MISSING),
+                org.github.joa.util.Analysis.INFO_HEAP_DUMP_PATH_MISSING + " analysis not identified.");
     }
 
     /**
@@ -899,15 +446,16 @@ class TestAnalysis {
         URI logFileUri = testFile.toURI();
         List<String> logLines = Files.readAllLines(Paths.get(logFileUri));
         gcManager.store(logLines, false);
-        JvmRun jvmRun = gcManager.getJvmRun(new Jvm(null, null), Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.ERROR_G1_HUMONGOUS_JDK_OLD),
+        JvmRun jvmRun = gcManager.getJvmRun(null, null, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
+        assertTrue(jvmRun.hasAnalysis(Analysis.ERROR_G1_HUMONGOUS_JDK_OLD),
                 Analysis.ERROR_G1_HUMONGOUS_JDK_OLD + " analysis not identified.");
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.WARN_G1_MIXED_GC_LIVE_THRSHOLD_PRCNT),
-                Analysis.WARN_G1_MIXED_GC_LIVE_THRSHOLD_PRCNT + " analysis not identified.");
-        assertFalse(jvmRun.getAnalysis().contains(Analysis.INFO_EXPERIMENTAL_VM_OPTIONS),
-                Analysis.INFO_EXPERIMENTAL_VM_OPTIONS + " analysis incorrectly identified.");
-        assertFalse(jvmRun.getAnalysis().contains(Analysis.INFO_GC_LOG_FILE_ROTATION_NOT_ENABLED),
-                Analysis.INFO_GC_LOG_FILE_ROTATION_NOT_ENABLED + " analysis incorrectly identified.");
+        assertTrue(jvmRun.hasAnalysis(org.github.joa.util.Analysis.WARN_G1_MIXED_GC_LIVE_THRSHOLD_PRCNT),
+                org.github.joa.util.Analysis.WARN_G1_MIXED_GC_LIVE_THRSHOLD_PRCNT + " analysis not identified.");
+        assertTrue(jvmRun.hasAnalysis(org.github.joa.util.Analysis.WARN_EXPERIMENTAL_VM_OPTIONS_ENABLED),
+                org.github.joa.util.Analysis.WARN_EXPERIMENTAL_VM_OPTIONS_ENABLED + " analysis not identified.");
+        assertFalse(jvmRun.hasAnalysis(org.github.joa.util.Analysis.WARN_JDK8_GC_LOG_FILE_ROTATION_NOT_ENABLED),
+                org.github.joa.util.Analysis.WARN_JDK8_GC_LOG_FILE_ROTATION_NOT_ENABLED
+                        + " analysis incorrectly identified.");
     }
 
     @Test
@@ -918,9 +466,8 @@ class TestAnalysis {
         URI logFileUri = testFile.toURI();
         List<String> logLines = Files.readAllLines(Paths.get(logFileUri));
         gcManager.store(logLines, false);
-        JvmRun jvmRun = gcManager.getJvmRun(new Jvm(null, null), Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.INFO_THREAD_DUMP),
-                Analysis.INFO_THREAD_DUMP + " analysis identified.");
+        JvmRun jvmRun = gcManager.getJvmRun(null, null, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
+        assertTrue(jvmRun.hasAnalysis(Analysis.INFO_THREAD_DUMP), Analysis.INFO_THREAD_DUMP + " analysis identified.");
     }
 
     /**
@@ -935,10 +482,10 @@ class TestAnalysis {
         URI logFileUri = testFile.toURI();
         List<String> logLines = Files.readAllLines(Paths.get(logFileUri));
         gcManager.store(logLines, false);
-        JvmRun jvmRun = gcManager.getJvmRun(new Jvm(null, null), Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        assertFalse(jvmRun.getAnalysis().contains(Analysis.WARN_CMS_INITIAL_MARK_LOW_PARALLELISM),
+        JvmRun jvmRun = gcManager.getJvmRun(null, null, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
+        assertFalse(jvmRun.hasAnalysis(Analysis.WARN_CMS_INITIAL_MARK_LOW_PARALLELISM),
                 Analysis.WARN_CMS_INITIAL_MARK_LOW_PARALLELISM + " analysis incorrectly identified.");
-        assertFalse(jvmRun.getAnalysis().contains(Analysis.INFO_SWAP_DISABLED),
+        assertFalse(jvmRun.hasAnalysis(Analysis.INFO_SWAP_DISABLED),
                 Analysis.INFO_SWAP_DISABLED + " analysis incorrectly identified.");
     }
 
@@ -954,178 +501,51 @@ class TestAnalysis {
         URI logFileUri = testFile.toURI();
         List<String> logLines = Files.readAllLines(Paths.get(logFileUri));
         gcManager.store(logLines, false);
-        JvmRun jvmRun = gcManager.getJvmRun(new Jvm(null, null), Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        assertFalse(jvmRun.getAnalysis().contains(Analysis.WARN_CMS_INITIAL_MARK_LOW_PARALLELISM),
+        JvmRun jvmRun = gcManager.getJvmRun(null, null, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
+        assertFalse(jvmRun.hasAnalysis(Analysis.WARN_CMS_INITIAL_MARK_LOW_PARALLELISM),
                 Analysis.WARN_CMS_INITIAL_MARK_LOW_PARALLELISM + " analysis incorrectly identified.");
-    }
-
-    /**
-     * Test analysis if instrumentation being used.
-     */
-    @Test
-    void testInstrumentation() {
-        String jvmOptions = "-Xss128k -Xms2048M -javaagent:byteman.jar=script:kill-3.btm,boot:byteman.jar -Xmx2048M";
-        GcManager gcManager = new GcManager();
-        Jvm jvm = new Jvm(jvmOptions, null);
-        JvmRun jvmRun = gcManager.getJvmRun(jvm, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.INFO_INSTRUMENTATION),
-                Analysis.INFO_INSTRUMENTATION + " analysis not identified.");
-    }
-
-    @Test
-    void testJdk8G1PriorUpdate40() {
-        String jvmOptions = "";
-        GcManager gcManager = new GcManager();
-        Jvm jvm = new Jvm(jvmOptions, null);
-        JvmRun jvmRun = gcManager.getJvmRun(jvm, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        jvmRun.getJvm().setVersion(" JRE (1.8.0_20-b32) ");
-        List<CollectorFamily> collectorFamilies = new ArrayList<CollectorFamily>();
-        collectorFamilies.add(CollectorFamily.G1);
-        jvmRun.setCollectorFamilies(collectorFamilies);
-        jvmRun.doAnalysis();
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.WARN_G1_JDK8_PRIOR_U40),
-                Analysis.WARN_G1_JDK8_PRIOR_U40 + " analysis not identified.");
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.WARN_G1_JDK8_PRIOR_U40_RECS),
-                Analysis.WARN_G1_JDK8_PRIOR_U40_RECS + " analysis not identified.");
-        assertFalse(jvmRun.getAnalysis().contains(Analysis.INFO_EXPERIMENTAL_VM_OPTIONS),
-                Analysis.INFO_EXPERIMENTAL_VM_OPTIONS + " analysis incorrectly identified.");
-    }
-
-    @Test
-    void testJdk8G1PriorUpdate40NoLoggingEvents() {
-        String jvmOptions = "-XX:+UseG1GC";
-        GcManager gcManager = new GcManager();
-        Jvm jvm = new Jvm(jvmOptions, null);
-        JvmRun jvmRun = gcManager.getJvmRun(jvm, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        jvmRun.getJvm().setVersion(" JRE (1.8.0_20-b32) ");
-        jvmRun.doAnalysis();
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.WARN_G1_JDK8_PRIOR_U40),
-                Analysis.WARN_G1_JDK8_PRIOR_U40 + " analysis not identified.");
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.WARN_G1_JDK8_PRIOR_U40_RECS),
-                Analysis.WARN_G1_JDK8_PRIOR_U40_RECS + " analysis not identified.");
-        assertFalse(jvmRun.getAnalysis().contains(Analysis.INFO_EXPERIMENTAL_VM_OPTIONS),
-                Analysis.INFO_EXPERIMENTAL_VM_OPTIONS + " analysis incorrectly identified.");
-    }
-
-    @Test
-    void testJdk8G1PriorUpdate40WithRecommendedJvmOptions() {
-        String jvmOptions = "-XX:+UnlockExperimentalVMOptions -XX:G1MixedGCLiveThresholdPercent=85 "
-                + "-XX:G1HeapWastePercent=5";
-        GcManager gcManager = new GcManager();
-        Jvm jvm = new Jvm(jvmOptions, null);
-        JvmRun jvmRun = gcManager.getJvmRun(jvm, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        jvmRun.getJvm().setVersion(" JRE (1.8.0_20-b32) ");
-        List<CollectorFamily> collectorFamilies = new ArrayList<CollectorFamily>();
-        collectorFamilies.add(CollectorFamily.G1);
-        jvmRun.setCollectorFamilies(collectorFamilies);
-        jvmRun.doAnalysis();
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.WARN_G1_JDK8_PRIOR_U40),
-                Analysis.WARN_G1_JDK8_PRIOR_U40 + " analysis not identified.");
-        assertFalse(jvmRun.getAnalysis().contains(Analysis.WARN_G1_JDK8_PRIOR_U40_RECS),
-                Analysis.WARN_G1_JDK8_PRIOR_U40_RECS + " analysis incorrectly identified.");
-        assertFalse(jvmRun.getAnalysis().contains(Analysis.INFO_EXPERIMENTAL_VM_OPTIONS),
-                Analysis.INFO_EXPERIMENTAL_VM_OPTIONS + " analysis incorrectly identified.");
-    }
-
-    @Test
-    void testJdk8NotG1PriorUpdate40() {
-        String jvmOptions = "";
-        GcManager gcManager = new GcManager();
-        Jvm jvm = new Jvm(jvmOptions, null);
-        JvmRun jvmRun = gcManager.getJvmRun(jvm, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        jvmRun.getJvm().setVersion(" JRE (1.8.0_20-b32) ");
-        List<CollectorFamily> collectorFamilies = new ArrayList<CollectorFamily>();
-        collectorFamilies.add(CollectorFamily.CMS);
-        jvmRun.setCollectorFamilies(collectorFamilies);
-        jvmRun.doAnalysis();
-        assertFalse(jvmRun.getAnalysis().contains(Analysis.WARN_G1_JDK8_PRIOR_U40),
-                Analysis.WARN_G1_JDK8_PRIOR_U40 + " analysis incorrectly identified.");
-        assertFalse(jvmRun.getAnalysis().contains(Analysis.WARN_G1_JDK8_PRIOR_U40_RECS),
-                Analysis.WARN_G1_JDK8_PRIOR_U40_RECS + " analysis incorrectly identified.");
-        assertFalse(jvmRun.getAnalysis().contains(Analysis.INFO_EXPERIMENTAL_VM_OPTIONS),
-                Analysis.INFO_EXPERIMENTAL_VM_OPTIONS + " analysis incorrectly identified.");
-    }
-
-    @Test
-    void testJdk8Update40() {
-        String jvmOptions = "-XX:+UnlockExperimentalVMOptions";
-        GcManager gcManager = new GcManager();
-        Jvm jvm = new Jvm(jvmOptions, null);
-        JvmRun jvmRun = gcManager.getJvmRun(jvm, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        jvmRun.getJvm().setVersion(" JRE (1.8.0_40-b26) ");
-        jvmRun.doAnalysis();
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.INFO_EXPERIMENTAL_VM_OPTIONS),
-                Analysis.INFO_EXPERIMENTAL_VM_OPTIONS + " analysis not identified.");
-        assertFalse(jvmRun.getAnalysis().contains(Analysis.WARN_G1_JDK8_PRIOR_U40),
-                Analysis.WARN_G1_JDK8_PRIOR_U40 + " analysis incorrectly identified.");
-        assertFalse(jvmRun.getAnalysis().contains(Analysis.WARN_G1_JDK8_PRIOR_U40_RECS),
-                Analysis.WARN_G1_JDK8_PRIOR_U40_RECS + " analysis incorrectly identified.");
-    }
-
-    @Test
-    void testLogFileNumberWithRotationDisabled() {
-        String jvmOptions = "-Xss128k -XX:NumberOfGCLogFiles=5 -XX:-UseGCLogFileRotation -Xms2048M";
-        GcManager gcManager = new GcManager();
-        Jvm jvm = new Jvm(jvmOptions, null);
-        JvmRun jvmRun = gcManager.getJvmRun(jvm, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        jvmRun.doAnalysis();
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.INFO_GC_LOG_FILE_ROTATION_DISABLED),
-                Analysis.INFO_GC_LOG_FILE_ROTATION_DISABLED + " analysis not identified.");
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.WARN_GC_LOG_FILE_NUM_ROTATION_DISABLED),
-                Analysis.WARN_GC_LOG_FILE_NUM_ROTATION_DISABLED + " analysis not identified.");
-    }
-
-    @Test
-    void testLogFileRotationDisabled() {
-        String jvmOptions = "-Xss128k -XX:-UseGCLogFileRotation -Xms2048M";
-        GcManager gcManager = new GcManager();
-        Jvm jvm = new Jvm(jvmOptions, null);
-        JvmRun jvmRun = gcManager.getJvmRun(jvm, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        jvmRun.doAnalysis();
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.INFO_GC_LOG_FILE_ROTATION_DISABLED),
-                Analysis.INFO_GC_LOG_FILE_ROTATION_DISABLED + " analysis not identified.");
     }
 
     @Test
     void testMaxTenuringOverrideCms() {
         String jvmOptions = "-Xss128k -XX:MaxTenuringThreshold=14 -Xmx2048M";
+        JvmContext jvmContext = new JvmContext(jvmOptions);
+        List<GarbageCollector> collectors = new ArrayList<GarbageCollector>();
+        collectors.add(GarbageCollector.CMS);
+        jvmContext.setGarbageCollectors(collectors);
         GcManager gcManager = new GcManager();
-        Jvm jvm = new Jvm(jvmOptions, null);
-        JvmRun jvmRun = gcManager.getJvmRun(jvm, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        List<CollectorFamily> collectors = new ArrayList<CollectorFamily>();
-        collectors.add(JdkUtil.CollectorFamily.CMS);
-        jvmRun.setCollectorFamilies(collectors);
+        JvmRun jvmRun = gcManager.getJvmRun(jvmOptions, null, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
         jvmRun.doAnalysis();
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.INFO_MAX_TENURING_OVERRIDE),
-                Analysis.INFO_MAX_TENURING_OVERRIDE + " analysis not identified.");
+        assertTrue(jvmRun.hasAnalysis(org.github.joa.util.Analysis.INFO_MAX_TENURING_OVERRIDE),
+                org.github.joa.util.Analysis.INFO_MAX_TENURING_OVERRIDE + " analysis not identified.");
     }
 
     @Test
     void testMaxTenuringOverrideG1() {
         String jvmOptions = "-Xss128k -XX:MaxTenuringThreshold=6 -Xmx2048M";
+        JvmContext jvmContext = new JvmContext(jvmOptions);
+        List<GarbageCollector> collectors = new ArrayList<GarbageCollector>();
+        collectors.add(GarbageCollector.G1);
+        jvmContext.setGarbageCollectors(collectors);
         GcManager gcManager = new GcManager();
-        Jvm jvm = new Jvm(jvmOptions, null);
-        JvmRun jvmRun = gcManager.getJvmRun(jvm, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        List<CollectorFamily> collectors = new ArrayList<CollectorFamily>();
-        collectors.add(JdkUtil.CollectorFamily.G1);
-        jvmRun.setCollectorFamilies(collectors);
+        JvmRun jvmRun = gcManager.getJvmRun(jvmOptions, null, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
         jvmRun.doAnalysis();
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.INFO_MAX_TENURING_OVERRIDE),
-                Analysis.INFO_MAX_TENURING_OVERRIDE + " analysis not identified.");
+        assertTrue(jvmRun.hasAnalysis(org.github.joa.util.Analysis.INFO_MAX_TENURING_OVERRIDE),
+                org.github.joa.util.Analysis.INFO_MAX_TENURING_OVERRIDE + " analysis not identified.");
     }
 
     @Test
     void testMaxTenuringOverrideParallel() {
         String jvmOptions = "-Xss128k -XX:MaxTenuringThreshold=6 -Xmx2048M";
+        JvmContext jvmContext = new JvmContext(jvmOptions);
+        List<GarbageCollector> collectors = new ArrayList<GarbageCollector>();
+        collectors.add(GarbageCollector.PARALLEL_OLD);
+        jvmContext.setGarbageCollectors(collectors);
         GcManager gcManager = new GcManager();
-        Jvm jvm = new Jvm(jvmOptions, null);
-        JvmRun jvmRun = gcManager.getJvmRun(jvm, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        List<CollectorFamily> collectors = new ArrayList<CollectorFamily>();
-        collectors.add(JdkUtil.CollectorFamily.PARALLEL);
-        jvmRun.setCollectorFamilies(collectors);
+        JvmRun jvmRun = gcManager.getJvmRun(jvmOptions, null, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
         jvmRun.doAnalysis();
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.INFO_MAX_TENURING_OVERRIDE),
-                Analysis.INFO_MAX_TENURING_OVERRIDE + " analysis not identified.");
+        assertTrue(jvmRun.hasAnalysis(org.github.joa.util.Analysis.INFO_MAX_TENURING_OVERRIDE),
+                org.github.joa.util.Analysis.INFO_MAX_TENURING_OVERRIDE + " analysis not identified.");
     }
 
     /**
@@ -1140,36 +560,10 @@ class TestAnalysis {
         URI logFileUri = testFile.toURI();
         List<String> logLines = Files.readAllLines(Paths.get(logFileUri));
         gcManager.store(logLines, false);
-        JvmRun jvmRun = gcManager.getJvmRun(new Jvm(null, null), Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
+        JvmRun jvmRun = gcManager.getJvmRun(null, null, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
         assertEquals(1, jvmRun.getEventTypes().size(), "Event type count not correct.");
         assertFalse(jvmRun.getEventTypes().contains(LogEventType.UNKNOWN),
                 JdkUtil.LogEventType.UNKNOWN.toString() + " collector identified.");
-    }
-
-    /**
-     * Test MaxMetaspaceSize is less than CompressedClassSpaceSize.
-     */
-    @Test
-    void testMetaspaceSizeLtCompClassSize() {
-        String jvmOptions = "-XX:MetaspaceSize=512M -XX:MaxMetaspaceSize=512M -XX:CompressedClassSpaceSize=1024M";
-        GcManager gcManager = new GcManager();
-        Jvm jvm = new Jvm(jvmOptions, null);
-        JvmRun jvmRun = gcManager.getJvmRun(jvm, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.ERROR_METASPACE_SIZE_LT_COMP_CLASS_SIZE),
-                Analysis.ERROR_METASPACE_SIZE_LT_COMP_CLASS_SIZE + " analysis not identified.");
-    }
-
-    /**
-     * Test analysis if native library being used.
-     */
-    @Test
-    void testNative() {
-        String jvmOptions = "-Xss128k -Xms2048M -agentpath:/path/to/agent.so -Xmx2048M";
-        GcManager gcManager = new GcManager();
-        Jvm jvm = new Jvm(jvmOptions, null);
-        JvmRun jvmRun = gcManager.getJvmRun(jvm, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.INFO_NATIVE),
-                Analysis.INFO_NATIVE + " analysis not identified.");
     }
 
     @Test
@@ -1180,11 +574,11 @@ class TestAnalysis {
         List<String> logLines = Files.readAllLines(Paths.get(logFileUri));
         logLines = gcManager.preprocess(logLines, null);
         gcManager.store(logLines, false);
-        JvmRun jvmRun = gcManager.getJvmRun(new Jvm(null, null), Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
+        JvmRun jvmRun = gcManager.getJvmRun(null, null, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
         assertEquals(0, jvmRun.getEventTypes().size(), "Event type count not correct.");
         assertFalse(jvmRun.getEventTypes().contains(LogEventType.UNKNOWN),
                 JdkUtil.LogEventType.UNKNOWN.toString() + " collector identified.");
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.ERROR_OOME_METASPACE),
+        assertTrue(jvmRun.hasAnalysis(Analysis.ERROR_OOME_METASPACE),
                 Analysis.ERROR_OOME_METASPACE + " analysis identified.");
     }
 
@@ -1200,7 +594,7 @@ class TestAnalysis {
         URI logFileUri = testFile.toURI();
         List<String> logLines = Files.readAllLines(Paths.get(logFileUri));
         gcManager.store(logLines, false);
-        JvmRun jvmRun = gcManager.getJvmRun(new Jvm(null, null), Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
+        JvmRun jvmRun = gcManager.getJvmRun(null, null, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
         assertEquals(2, jvmRun.getEventTypes().size(), "Event type count not correct.");
         assertFalse(jvmRun.getEventTypes().contains(LogEventType.UNKNOWN),
                 JdkUtil.LogEventType.UNKNOWN.toString() + " collector identified.");
@@ -1208,9 +602,9 @@ class TestAnalysis {
                 "Log line not recognized as " + JdkUtil.LogEventType.PARALLEL_SCAVENGE.toString() + ".");
         assertTrue(jvmRun.getEventTypes().contains(JdkUtil.LogEventType.PARALLEL_COMPACTING_OLD),
                 "Log line not recognized as " + JdkUtil.LogEventType.PARALLEL_COMPACTING_OLD.toString() + ".");
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.WARN_EXPLICIT_GC_PARALLEL),
+        assertTrue(jvmRun.hasAnalysis(Analysis.WARN_EXPLICIT_GC_PARALLEL),
                 Analysis.WARN_EXPLICIT_GC_PARALLEL + " analysis not identified.");
-        assertFalse(jvmRun.getAnalysis().contains(Analysis.ERROR_SERIAL_GC_PARALLEL),
+        assertFalse(jvmRun.hasAnalysis(Analysis.ERROR_SERIAL_GC_PARALLEL),
                 Analysis.ERROR_SERIAL_GC_PARALLEL + " analysis incorrectly identified.");
         assertEquals((long) 0, jvmRun.getInvertedParallelismCount(), "Inverted parallelism event count not correct.");
     }
@@ -1227,7 +621,7 @@ class TestAnalysis {
         URI logFileUri = testFile.toURI();
         List<String> logLines = Files.readAllLines(Paths.get(logFileUri));
         gcManager.store(logLines, false);
-        JvmRun jvmRun = gcManager.getJvmRun(new Jvm(null, null), Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
+        JvmRun jvmRun = gcManager.getJvmRun(null, null, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
         assertEquals(4, jvmRun.getEventTypes().size(), "Event type count not correct.");
         assertFalse(jvmRun.getEventTypes().contains(LogEventType.UNKNOWN),
                 JdkUtil.LogEventType.UNKNOWN.toString() + " collector identified.");
@@ -1239,12 +633,13 @@ class TestAnalysis {
                 "Log line not recognized as " + JdkUtil.LogEventType.CMS_REMARK.toString() + ".");
         assertTrue(jvmRun.getEventTypes().contains(JdkUtil.LogEventType.CMS_CONCURRENT),
                 "Log line not recognized as " + JdkUtil.LogEventType.CMS_CONCURRENT.toString() + ".");
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.WARN_CMS_PAR_NEW_DISABLED),
-                Analysis.WARN_CMS_PAR_NEW_DISABLED + " analysis not identified.");
-        assertFalse(jvmRun.getAnalysis().contains(Analysis.ERROR_SERIAL_GC),
+        assertTrue(jvmRun.hasAnalysis(org.github.joa.util.Analysis.WARN_JDK8_CMS_PAR_NEW_DISABLED),
+                org.github.joa.util.Analysis.WARN_JDK8_CMS_PAR_NEW_DISABLED + " analysis not identified.");
+        assertFalse(jvmRun.hasAnalysis(Analysis.ERROR_SERIAL_GC),
                 Analysis.ERROR_SERIAL_GC + " analysis incorrectly identified.");
-        assertFalse(jvmRun.getAnalysis().contains(Analysis.INFO_GC_LOG_FILE_ROTATION_NOT_ENABLED),
-                Analysis.INFO_GC_LOG_FILE_ROTATION_NOT_ENABLED + " analysis incorrectly identified.");
+        assertFalse(jvmRun.hasAnalysis(org.github.joa.util.Analysis.WARN_JDK8_GC_LOG_FILE_ROTATION_NOT_ENABLED),
+                org.github.joa.util.Analysis.WARN_JDK8_GC_LOG_FILE_ROTATION_NOT_ENABLED
+                        + " analysis incorrectly identified.");
     }
 
     /**
@@ -1259,13 +654,13 @@ class TestAnalysis {
         URI logFileUri = testFile.toURI();
         List<String> logLines = Files.readAllLines(Paths.get(logFileUri));
         gcManager.store(logLines, false);
-        JvmRun jvmRun = gcManager.getJvmRun(new Jvm(null, null), Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        assertEquals(bytes(1968287744L), jvmRun.getJvm().getPhysicalMemory(), "Physical not parsed correctly.");
-        assertEquals(bytes(4718592000L), jvmRun.getJvm().getMaxHeapBytes(), "Heap size not parsed correctly.");
-        assertEquals(bytes(0L), jvmRun.getJvm().getMaxMetaspaceBytes(), "Metaspace size not parsed correctly.");
-        assertEquals(bytes(0L), jvmRun.getJvm().getCompressedClassSpaceSizeBytes(),
+        JvmRun jvmRun = gcManager.getJvmRun(null, null, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
+        assertEquals(bytes(1968287744L), jvmRun.getPhysicalMemory(), "Physical not parsed correctly.");
+        assertEquals(bytes(4718592000L), jvmRun.getMaxHeapBytes(), "Heap size not parsed correctly.");
+        assertEquals(bytes(0L), jvmRun.getMaxMetaspaceBytes(), "Metaspace size not parsed correctly.");
+        assertEquals(bytes(0L), jvmRun.getCompressedClassSpaceSizeBytes(),
                 "Class compressed pointer space size not parsed correctly.");
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.ERROR_PHYSICAL_MEMORY),
+        assertTrue(jvmRun.hasAnalysis(Analysis.ERROR_PHYSICAL_MEMORY),
                 Analysis.ERROR_PHYSICAL_MEMORY + " analysis not identified.");
     }
 
@@ -1281,14 +676,13 @@ class TestAnalysis {
         URI logFileUri = testFile.toURI();
         List<String> logLines = Files.readAllLines(Paths.get(logFileUri));
         gcManager.store(logLines, false);
-        JvmRun jvmRun = gcManager.getJvmRun(new Jvm(null, null), Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        assertEquals(bytes(16728526848L), jvmRun.getJvm().getPhysicalMemory(), "Physical not parsed correctly.");
-        assertEquals(bytes(5368709120L), jvmRun.getJvm().getMaxHeapBytes(), "Heap size not parsed correctly.");
-        assertEquals(bytes(3221225472L), jvmRun.getJvm().getMaxMetaspaceBytes(),
-                "Metaspace size not parsed correctly.");
-        assertEquals(bytes(2147483648L), jvmRun.getJvm().getCompressedClassSpaceSizeBytes(),
+        JvmRun jvmRun = gcManager.getJvmRun(null, null, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
+        assertEquals(bytes(16728526848L), jvmRun.getPhysicalMemory(), "Physical not parsed correctly.");
+        assertEquals(bytes(5368709120L), jvmRun.getMaxHeapBytes(), "Heap size not parsed correctly.");
+        assertEquals(bytes(3221225472L), jvmRun.getMaxMetaspaceBytes(), "Metaspace size not parsed correctly.");
+        assertEquals(bytes(2147483648L), jvmRun.getCompressedClassSpaceSizeBytes(),
                 "Class compressed pointer space size not parsed correctly.");
-        assertFalse(jvmRun.getAnalysis().contains(Analysis.ERROR_PHYSICAL_MEMORY),
+        assertFalse(jvmRun.hasAnalysis(Analysis.ERROR_PHYSICAL_MEMORY),
                 Analysis.ERROR_PHYSICAL_MEMORY + " analysis incorrectly identified.");
     }
 
@@ -1304,100 +698,15 @@ class TestAnalysis {
         URI logFileUri = testFile.toURI();
         List<String> logLines = Files.readAllLines(Paths.get(logFileUri));
         gcManager.store(logLines, false);
-        JvmRun jvmRun = gcManager.getJvmRun(new Jvm(null, null), Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        assertEquals(bytes(50465866752L), jvmRun.getJvm().getPhysicalMemory(), "Physical not parsed correctly.");
-        assertEquals(bytes(45097156608L), jvmRun.getJvm().getMaxHeapBytes(), "Heap size not parsed correctly.");
-        assertEquals(bytes(5368709120L), jvmRun.getJvm().getMaxMetaspaceBytes(),
-                "Metaspace size not parsed correctly.");
+        JvmRun jvmRun = gcManager.getJvmRun(null, null, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
+        assertEquals(bytes(50465866752L), jvmRun.getPhysicalMemory(), "Physical not parsed correctly.");
+        assertEquals(bytes(45097156608L), jvmRun.getMaxHeapBytes(), "Heap size not parsed correctly.");
+        assertEquals(bytes(5368709120L), jvmRun.getMaxMetaspaceBytes(), "Metaspace size not parsed correctly.");
         // Class compressed pointer space has a size, but it is ignored when calculating JVM memory.
-        assertEquals(bytes(1073741824L), jvmRun.getJvm().getCompressedClassSpaceSizeBytes(),
+        assertEquals(bytes(1073741824L), jvmRun.getCompressedClassSpaceSizeBytes(),
                 "Class compressed pointer space size not parsed correctly.");
-        assertFalse(jvmRun.getAnalysis().contains(Analysis.ERROR_PHYSICAL_MEMORY),
+        assertFalse(jvmRun.hasAnalysis(Analysis.ERROR_PHYSICAL_MEMORY),
                 Analysis.ERROR_PHYSICAL_MEMORY + " analysis incorrectly identified.");
-    }
-
-    @Test
-    void testPrintAdaptiveResizePolicyEnabled() {
-        String jvmOptions = "-Xss128k -XX:+PrintAdaptiveSizePolicy -Xmx2048M";
-        GcManager gcManager = new GcManager();
-        Jvm jvm = new Jvm(jvmOptions, null);
-        JvmRun jvmRun = gcManager.getJvmRun(jvm, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        jvmRun.doAnalysis();
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.INFO_PRINT_ADAPTIVE_RESIZE_PLCY_ENABLED),
-                Analysis.INFO_PRINT_ADAPTIVE_RESIZE_PLCY_ENABLED + " analysis not identified.");
-    }
-
-    @Test
-    void testPrintApplicationConcurrentTime() {
-        String jvmOptions = "-Xss128k -XX:+PrintGCApplicationConcurrentTime -Xms2048M";
-        GcManager gcManager = new GcManager();
-        Jvm jvm = new Jvm(jvmOptions, null);
-        JvmRun jvmRun = gcManager.getJvmRun(jvm, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        jvmRun.doAnalysis();
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.WARN_PRINT_GC_APPLICATION_CONCURRENT_TIME),
-                Analysis.WARN_PRINT_GC_APPLICATION_CONCURRENT_TIME + " analysis not identified.");
-    }
-
-    @Test
-    void testPrintClassHistogramAfterFullGcEnabled() {
-        String jvmOptions = "-Xss128k -XX:+PrintClassHistogramAfterFullGC -Xms2048M";
-        GcManager gcManager = new GcManager();
-        Jvm jvm = new Jvm(jvmOptions, null);
-        JvmRun jvmRun = gcManager.getJvmRun(jvm, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        jvmRun.doAnalysis();
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.WARN_PRINT_CLASS_HISTOGRAM_AFTER_FULL_GC),
-                Analysis.WARN_PRINT_CLASS_HISTOGRAM_AFTER_FULL_GC + " analysis not identified.");
-        assertFalse(jvmRun.getAnalysis().contains(Analysis.WARN_PRINT_CLASS_HISTOGRAM),
-                Analysis.WARN_PRINT_CLASS_HISTOGRAM + " analysis incorrectly identified.");
-        assertFalse(jvmRun.getAnalysis().contains(Analysis.WARN_PRINT_CLASS_HISTOGRAM_BEFORE_FULL_GC),
-                Analysis.WARN_PRINT_CLASS_HISTOGRAM_BEFORE_FULL_GC + " analysis incorrectly identified.");
-    }
-
-    @Test
-    void testPrintClassHistogramBeforeFullGcEnabled() {
-        String jvmOptions = "-Xss128k -XX:+PrintClassHistogramBeforeFullGC -Xms2048M";
-        GcManager gcManager = new GcManager();
-        Jvm jvm = new Jvm(jvmOptions, null);
-        JvmRun jvmRun = gcManager.getJvmRun(jvm, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        jvmRun.doAnalysis();
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.WARN_PRINT_CLASS_HISTOGRAM_BEFORE_FULL_GC),
-                Analysis.WARN_PRINT_CLASS_HISTOGRAM_BEFORE_FULL_GC + " analysis not identified.");
-        assertFalse(jvmRun.getAnalysis().contains(Analysis.WARN_PRINT_CLASS_HISTOGRAM),
-                Analysis.WARN_PRINT_CLASS_HISTOGRAM + " analysis incorrectly identified.");
-        assertFalse(jvmRun.getAnalysis().contains(Analysis.WARN_PRINT_CLASS_HISTOGRAM_AFTER_FULL_GC),
-                Analysis.WARN_PRINT_CLASS_HISTOGRAM_AFTER_FULL_GC + " analysis incorrectly identified.");
-    }
-
-    @Test
-    void testPrintClassHistogramEnabled() {
-        String jvmOptions = "-Xss128k -XX:+PrintClassHistogram -Xms2048M";
-        GcManager gcManager = new GcManager();
-        Jvm jvm = new Jvm(jvmOptions, null);
-        JvmRun jvmRun = gcManager.getJvmRun(jvm, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        jvmRun.doAnalysis();
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.WARN_PRINT_CLASS_HISTOGRAM),
-                Analysis.WARN_PRINT_CLASS_HISTOGRAM + " analysis not identified.");
-        assertFalse(jvmRun.getAnalysis().contains(Analysis.WARN_PRINT_CLASS_HISTOGRAM_AFTER_FULL_GC),
-                Analysis.WARN_PRINT_CLASS_HISTOGRAM_AFTER_FULL_GC + " analysis incorrectly identified.");
-        assertFalse(jvmRun.getAnalysis().contains(Analysis.WARN_PRINT_CLASS_HISTOGRAM_BEFORE_FULL_GC),
-                Analysis.WARN_PRINT_CLASS_HISTOGRAM_BEFORE_FULL_GC + " analysis incorrectly identified.");
-    }
-
-    /**
-     * Test PrintCommandLineFlags missing.
-     */
-    @Test
-    void testPrintCommandlineFlagsMissing() {
-        String jvmOptions = "MGM";
-        GcManager gcManager = new GcManager();
-        Jvm jvm = new Jvm(jvmOptions, null);
-        JvmRun jvmRun = gcManager.getJvmRun(jvm, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        List<LogEventType> eventTypes = new ArrayList<LogEventType>();
-        eventTypes.add(LogEventType.UNKNOWN);
-        jvmRun.setEventTypes(eventTypes);
-        jvmRun.doAnalysis();
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.WARN_PRINT_COMMANDLINE_FLAGS),
-                Analysis.WARN_PRINT_COMMANDLINE_FLAGS + " analysis not identified.");
     }
 
     /**
@@ -1407,10 +716,9 @@ class TestAnalysis {
     void testPrintCommandlineFlagsNoGcLogging() {
         String jvmOptions = "MGM";
         GcManager gcManager = new GcManager();
-        Jvm jvm = new Jvm(jvmOptions, null);
-        JvmRun jvmRun = gcManager.getJvmRun(jvm, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
+        JvmRun jvmRun = gcManager.getJvmRun(jvmOptions, null, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
         jvmRun.doAnalysis();
-        assertFalse(jvmRun.getAnalysis().contains(Analysis.WARN_PRINT_COMMANDLINE_FLAGS),
+        assertFalse(jvmRun.hasAnalysis(Analysis.WARN_PRINT_COMMANDLINE_FLAGS),
                 Analysis.WARN_PRINT_COMMANDLINE_FLAGS + " analysis identified.");
     }
 
@@ -1421,22 +729,10 @@ class TestAnalysis {
     void testPrintCommandlineFlagsNotMissing() {
         String jvmOptions = "-Xss128k -XX:+PrintCommandLineFlags -Xms2048M";
         GcManager gcManager = new GcManager();
-        Jvm jvm = new Jvm(jvmOptions, null);
-        JvmRun jvmRun = gcManager.getJvmRun(jvm, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
+        JvmRun jvmRun = gcManager.getJvmRun(jvmOptions, null, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
         jvmRun.doAnalysis();
-        assertFalse(jvmRun.getAnalysis().contains(Analysis.WARN_PRINT_COMMANDLINE_FLAGS),
+        assertFalse(jvmRun.hasAnalysis(Analysis.WARN_PRINT_COMMANDLINE_FLAGS),
                 Analysis.WARN_PRINT_COMMANDLINE_FLAGS + " analysis identified.");
-    }
-
-    @Test
-    void testPrintFlsStatistics() {
-        String jvmOptions = "-Xss128k -XX:PrintFLSStatistics=1 -Xms2048M";
-        GcManager gcManager = new GcManager();
-        Jvm jvm = new Jvm(jvmOptions, null);
-        JvmRun jvmRun = gcManager.getJvmRun(jvm, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        jvmRun.doAnalysis();
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.INFO_PRINT_FLS_STATISTICS),
-                Analysis.INFO_PRINT_FLS_STATISTICS + " analysis not identified.");
     }
 
     /**
@@ -1451,29 +747,15 @@ class TestAnalysis {
         URI logFileUri = testFile.toURI();
         List<String> logLines = Files.readAllLines(Paths.get(logFileUri));
         gcManager.store(logLines, false);
-        JvmRun jvmRun = gcManager.getJvmRun(new Jvm(null, null), Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.INFO_PRINT_FLS_STATISTICS),
-                Analysis.INFO_PRINT_FLS_STATISTICS + " analysis not identified.");
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.INFO_PRINT_PROMOTION_FAILURE),
-                Analysis.INFO_PRINT_PROMOTION_FAILURE + " analysis not identified.");
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.WARN_USE_MEMBAR),
-                Analysis.WARN_USE_MEMBAR + " analysis not identified.");
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.WARN_CMS_INIT_OCCUPANCY_ONLY_MISSING),
-                Analysis.WARN_CMS_INIT_OCCUPANCY_ONLY_MISSING + " analysis not identified.");
-    }
-
-    /**
-     * Test PrintGCDetails disabled.
-     */
-    @Test
-    void testPrintGCDetailsDisabled() {
-        String jvmOptions = "-Xss128k -XX:-PrintGCDetails -Xms2048M";
-        GcManager gcManager = new GcManager();
-        Jvm jvm = new Jvm(jvmOptions, null);
-        JvmRun jvmRun = gcManager.getJvmRun(jvm, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        jvmRun.doAnalysis();
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.WARN_PRINT_GC_DETAILS_DISABLED),
-                Analysis.WARN_PRINT_GC_DETAILS_DISABLED + " not identified.");
+        JvmRun jvmRun = gcManager.getJvmRun(null, null, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
+        assertTrue(jvmRun.hasAnalysis(org.github.joa.util.Analysis.INFO_JDK8_PRINT_FLS_STATISTICS),
+                org.github.joa.util.Analysis.INFO_JDK8_PRINT_FLS_STATISTICS + " analysis not identified.");
+        assertTrue(jvmRun.hasAnalysis(org.github.joa.util.Analysis.INFO_JDK8_PRINT_PROMOTION_FAILURE),
+                org.github.joa.util.Analysis.INFO_JDK8_PRINT_PROMOTION_FAILURE + " analysis not identified.");
+        assertTrue(jvmRun.hasAnalysis(org.github.joa.util.Analysis.WARN_USE_MEMBAR),
+                org.github.joa.util.Analysis.WARN_USE_MEMBAR + " analysis not identified.");
+        assertTrue(jvmRun.hasAnalysis(org.github.joa.util.Analysis.INFO_CMS_INIT_OCCUPANCY_ONLY_MISSING),
+                org.github.joa.util.Analysis.INFO_CMS_INIT_OCCUPANCY_ONLY_MISSING + " analysis not identified.");
     }
 
     /**
@@ -1488,48 +770,13 @@ class TestAnalysis {
         URI logFileUri = testFile.toURI();
         List<String> logLines = Files.readAllLines(Paths.get(logFileUri));
         gcManager.store(logLines, false);
-        JvmRun jvmRun = gcManager.getJvmRun(new Jvm(null, null), Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
+        JvmRun jvmRun = gcManager.getJvmRun(null, null, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
         assertTrue(jvmRun.getEventTypes().contains(LogEventType.VERBOSE_GC_YOUNG),
                 JdkUtil.LogEventType.VERBOSE_GC_YOUNG.toString() + " collector not identified.");
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.WARN_PRINT_GC_DETAILS_DISABLED),
-                Analysis.WARN_PRINT_GC_DETAILS_DISABLED + " analysis not identified.");
-        assertFalse(jvmRun.getAnalysis().contains(Analysis.WARN_PRINT_GC_DETAILS_MISSING),
-                Analysis.WARN_PRINT_GC_DETAILS_MISSING + " analysis incorrectly identified.");
-    }
-
-    /**
-     * Test PrintGCDetails missing.
-     */
-    @Test
-    void testPrintGCDetailsMissing() {
-        String jvmOptions = "-Xss128k -Xms2048M";
-        GcManager gcManager = new GcManager();
-        Jvm jvm = new Jvm(jvmOptions, null);
-        JvmRun jvmRun = gcManager.getJvmRun(jvm, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        jvmRun.getEventTypes().add(LogEventType.PARALLEL_SCAVENGE);
-        jvmRun.doAnalysis();
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.WARN_PRINT_GC_DETAILS_MISSING),
-                Analysis.WARN_PRINT_GC_DETAILS_MISSING + " analysis not identified.");
-        // Not applicable to unified logging
-        jvmRun.getAnalysis().clear();
-        jvmRun.getEventTypes().add(LogEventType.UNIFIED_CONCURRENT);
-        jvmRun.doAnalysis();
-        assertFalse(jvmRun.getAnalysis().contains(Analysis.WARN_PRINT_GC_DETAILS_MISSING),
-                Analysis.WARN_PRINT_GC_DETAILS_MISSING + " analysis incorrectly identified.");
-    }
-
-    /**
-     * Test PrintGCDetails not missing.
-     */
-    @Test
-    void testPrintGCDetailsNotMissing() {
-        String jvmOptions = "-Xss128k -XX:+PrintGCDetails -Xms2048M";
-        GcManager gcManager = new GcManager();
-        Jvm jvm = new Jvm(jvmOptions, null);
-        JvmRun jvmRun = gcManager.getJvmRun(jvm, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        jvmRun.doAnalysis();
-        assertFalse(jvmRun.getAnalysis().contains(Analysis.WARN_PRINT_GC_DETAILS_MISSING),
-                Analysis.WARN_PRINT_GC_DETAILS_MISSING + " analysis identified.");
+        assertTrue(jvmRun.hasAnalysis(org.github.joa.util.Analysis.WARN_JDK8_PRINT_GC_DETAILS_DISABLED),
+                org.github.joa.util.Analysis.WARN_JDK8_PRINT_GC_DETAILS_DISABLED + " analysis not identified.");
+        assertFalse(jvmRun.hasAnalysis(org.github.joa.util.Analysis.WARN_JDK8_PRINT_GC_DETAILS_MISSING),
+                org.github.joa.util.Analysis.WARN_JDK8_PRINT_GC_DETAILS_MISSING + " analysis incorrectly identified.");
     }
 
     /**
@@ -1555,20 +802,9 @@ class TestAnalysis {
         URI logFileUri = testFile.toURI();
         List<String> logLines = Files.readAllLines(Paths.get(logFileUri));
         gcManager.store(logLines, false);
-        JvmRun jvmRun = gcManager.getJvmRun(new Jvm(null, null), Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        assertFalse(jvmRun.getAnalysis().contains(Analysis.ERROR_CMS_PROMOTION_FAILED),
+        JvmRun jvmRun = gcManager.getJvmRun(null, null, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
+        assertFalse(jvmRun.hasAnalysis(Analysis.ERROR_CMS_PROMOTION_FAILED),
                 Analysis.ERROR_CMS_PROMOTION_FAILED + " analysis incorrectly identified.");
-    }
-
-    @Test
-    void testSurvivorRatio() {
-        String jvmOptions = "-Xss128k -XX:SurvivorRatio=6 -Xmx2048M";
-        GcManager gcManager = new GcManager();
-        Jvm jvm = new Jvm(jvmOptions, null);
-        JvmRun jvmRun = gcManager.getJvmRun(jvm, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        jvmRun.doAnalysis();
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.INFO_SURVIVOR_RATIO),
-                Analysis.INFO_SURVIVOR_RATIO + " analysis not identified.");
     }
 
     /**
@@ -1583,31 +819,9 @@ class TestAnalysis {
         URI logFileUri = testFile.toURI();
         List<String> logLines = Files.readAllLines(Paths.get(logFileUri));
         gcManager.store(logLines, false);
-        JvmRun jvmRun = gcManager.getJvmRun(new Jvm(null, null), Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.INFO_SWAP_DISABLED),
+        JvmRun jvmRun = gcManager.getJvmRun(null, null, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
+        assertTrue(jvmRun.hasAnalysis(Analysis.INFO_SWAP_DISABLED),
                 Analysis.INFO_SWAP_DISABLED + " analysis not identified.");
-    }
-
-    @Test
-    void testTargetSurvivorRatio() {
-        String jvmOptions = "-Xss128k -XX:TargetSurvivorRatio=90 -Xmx2048M";
-        GcManager gcManager = new GcManager();
-        Jvm jvm = new Jvm(jvmOptions, null);
-        JvmRun jvmRun = gcManager.getJvmRun(jvm, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        jvmRun.doAnalysis();
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.INFO_SURVIVOR_RATIO_TARGET),
-                Analysis.INFO_SURVIVOR_RATIO_TARGET + " analysis not identified.");
-    }
-
-    @Test
-    void testTenuringDisabled() {
-        String jvmOptions = "-Xss128k -XX:MaxTenuringThreshold=0 -Xmx2048M";
-        GcManager gcManager = new GcManager();
-        Jvm jvm = new Jvm(jvmOptions, null);
-        JvmRun jvmRun = gcManager.getJvmRun(jvm, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        jvmRun.doAnalysis();
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.WARN_TENURING_DISABLED),
-                Analysis.WARN_TENURING_DISABLED + " analysis not identified.");
     }
 
     @Test
@@ -1617,9 +831,9 @@ class TestAnalysis {
         URI logFileUri = testFile.toURI();
         List<String> logLines = Files.readAllLines(Paths.get(logFileUri));
         gcManager.store(logLines, false);
-        JvmRun jvmRun = gcManager.getJvmRun(new Jvm(null, null), Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.WARN_THREAD_STACK_SIZE_NOT_SET),
-                Analysis.WARN_THREAD_STACK_SIZE_NOT_SET + " analysis not identified.");
+        JvmRun jvmRun = gcManager.getJvmRun(null, null, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
+        assertFalse(jvmRun.hasAnalysis(org.github.joa.util.Analysis.WARN_THREAD_STACK_SIZE_NOT_SET_32),
+                org.github.joa.util.Analysis.WARN_THREAD_STACK_SIZE_NOT_SET_32 + " analysis incorrectly identified.");
     }
 
     /**
@@ -1627,50 +841,12 @@ class TestAnalysis {
      */
     @Test
     void testThreadStackSizeLarge() {
-        String options = "-o \"-Xss1024k\"";
+        String jvmOptions = "-Xss1025k";
         GcManager gcManager = new GcManager();
-        JvmRun jvmRun = gcManager.getJvmRun(new Jvm(options, null), Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
+        JvmRun jvmRun = gcManager.getJvmRun(jvmOptions, null, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
         jvmRun.doAnalysis();
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.WARN_THREAD_STACK_SIZE_LARGE),
-                Analysis.WARN_THREAD_STACK_SIZE_LARGE + " analysis not identified.");
-    }
-
-    @Test
-    void testTieredCompilation() {
-        String jvmOptions = "-Xss128k -XX:+TieredCompilation -Xms2048M";
-        GcManager gcManager = new GcManager();
-        Jvm jvm = new Jvm(jvmOptions, null);
-        JvmRun jvmRun = gcManager.getJvmRun(jvm, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        String version = "Java HotSpot(TM) 64-Bit Server VM (24.91-b03) for windows-amd64 JRE (1.7.0_91-b15), built on "
-                + "Oct  2 2015 03:26:24 by \"java_re\" with unknown MS VC++:1600";
-        jvmRun.getJvm().setVersion(version);
-        jvmRun.doAnalysis();
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.WARN_TIERED_COMPILATION_ENABLED),
-                Analysis.WARN_TIERED_COMPILATION_ENABLED + " analysis not identified.");
-    }
-
-    @Test
-    void testTraceClassUnloading() {
-        String jvmOptions = "-Xss128k -XX:+TraceClassUnloading -Xms2048M";
-        GcManager gcManager = new GcManager();
-        Jvm jvm = new Jvm(jvmOptions, null);
-        JvmRun jvmRun = gcManager.getJvmRun(jvm, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        jvmRun.doAnalysis();
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.WARN_TRACE_CLASS_UNLOADING),
-                Analysis.WARN_TRACE_CLASS_UNLOADING + " analysis not identified.");
-    }
-
-    @Test
-    void testUseFastUnorderedTimeStamps() {
-        String jvmOptions = "-XX:+UnlockExperimentalVMOptions -XX:+UseFastUnorderedTimeStamps -Xmx2048M";
-        GcManager gcManager = new GcManager();
-        Jvm jvm = new Jvm(jvmOptions, null);
-        JvmRun jvmRun = gcManager.getJvmRun(jvm, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        jvmRun.doAnalysis();
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.WARN_FAST_UNORDERED_TIMESTAMPS),
-                Analysis.WARN_FAST_UNORDERED_TIMESTAMPS + " analysis not identified.");
-        assertFalse(jvmRun.getAnalysis().contains(Analysis.INFO_EXPERIMENTAL_VM_OPTIONS),
-                Analysis.INFO_EXPERIMENTAL_VM_OPTIONS + " analysis incorrectly identified.");
+        assertTrue(jvmRun.hasAnalysis(org.github.joa.util.Analysis.WARN_THREAD_STACK_SIZE_LARGE),
+                org.github.joa.util.Analysis.WARN_THREAD_STACK_SIZE_LARGE + " analysis not identified.");
     }
 
     /**
@@ -1685,9 +861,9 @@ class TestAnalysis {
         URI logFileUri = testFile.toURI();
         List<String> logLines = Files.readAllLines(Paths.get(logFileUri));
         gcManager.store(logLines, false);
-        JvmRun jvmRun = gcManager.getJvmRun(new Jvm(null, null), Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
+        JvmRun jvmRun = gcManager.getJvmRun(null, null, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
         // VERGOSE_GC_OLD looks the same as G1_FULL without -XX:+PrintGCDetails
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.WARN_EXPLICIT_GC_UNKNOWN),
+        assertTrue(jvmRun.hasAnalysis(Analysis.WARN_EXPLICIT_GC_UNKNOWN),
                 Analysis.WARN_EXPLICIT_GC_UNKNOWN + " analysis not identified.");
     }
 
@@ -1703,8 +879,8 @@ class TestAnalysis {
         URI logFileUri = testFile.toURI();
         List<String> logLines = Files.readAllLines(Paths.get(logFileUri));
         gcManager.store(logLines, false);
-        JvmRun jvmRun = gcManager.getJvmRun(new Jvm(null, null), Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
-        assertTrue(jvmRun.getAnalysis().contains(Analysis.WARN_EXPLICIT_GC_UNKNOWN),
+        JvmRun jvmRun = gcManager.getJvmRun(null, null, Constants.DEFAULT_BOTTLENECK_THROUGHPUT_THRESHOLD);
+        assertTrue(jvmRun.hasAnalysis(Analysis.WARN_EXPLICIT_GC_UNKNOWN),
                 Analysis.WARN_EXPLICIT_GC_UNKNOWN + " analysis not identified.");
     }
 }
